Updated the translation of uno command in some countries and regions.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: If1696f4f40b2e1969ab2746c33fe3a0ae99ce0ea

--- a/browser/l10n/uno/an.json
+++ b/browser/l10n/uno/an.json
@@ -1096,7 +1096,7 @@
     "Image Filter": "Image Filter",
     "Image Mode": "Image Mode",
     "Image Placeholders": "Image Placeholders",
-    "Image Properties": "Image Properties",
+    "Image Properties": "Propiedatz d'a imachen",
     "Image...": "Página...",
     "Image~Map": "Mapa d'a imachen",
     "Import BASIC...": "Importar BASIC...",
@@ -1630,7 +1630,7 @@
     "Polygon, Filled": "Poligono, farciu",
     "Pop Art": "Pop-art",
     "Position": "Posición",
-    "Position and Size": "Position and Size",
+    "Position and Size": "Posición y grandaria",
     "Position and Si~ze...": "Posición y grandaria...",
     "Position in Document": "Posición en o documento",
     "Posterize": "Póster",
