--- a/browser/l10n/uno/ast.json
+++ b/browser/l10n/uno/ast.json
@@ -660,7 +660,7 @@
     "Edit with External Tool": "Editar con ferramienta esterna",
     "Edit ~Database File...": "Edit ~Database File...",
     "Edit...": "Editar...",
-    "Effect": "Effect",
+    "Effect": "Efeutu",
     "Elegant": "Elegant",
     "Elements": "Elementos",
     "Eliminate Points": "Desaniciar puntos",
@@ -2518,7 +2518,7 @@
     "View Images and Charts": "View Images and Charts",
     "View Panel": "View Panel",
     "Views Tab ~Bar": "Views Tab ~Bar",
-    "Vortex": "Vortex",
+    "Vortex": "Vórtiz",
     "Warning": "Warning",
     "Warning Cell Style": "Warning Cell Style",
     "Watermark...": "Marca d'agua",
