--- a/browser/l10n/uno/bg.json
+++ b/browser/l10n/uno/bg.json
@@ -2066,7 +2066,7 @@
     "Slide to Start": "Кадър в началото",
     "Slide ~Count": "Брой кадри",
     "Slide ~Layout": "Оформление на кадър",
-    "Slide ~Pane": "Панел за кадри",
+    "Slide ~Pane": "Панел „Кадри“",
     "Slide\/Layer": "Кадър\/слой",
     "SlideTransition": "Преход между кадри",
     "Slides per Row": "Кадри на ред",
@@ -2796,7 +2796,7 @@
     "~Page Break": "Нова страница",
     "~Page Number": "~Номер на страница",
     "~Page Numbers...": "~Номер на страница...",
-    "~Page Pane": "Панел за ~страница",
+    "~Page Pane": "Панел „Страници“",
     "~Page Style...": "Стил на страница...",
     "~Page...": "~Страница...",
     "~Parallel": "Успоредно",
