--- a/browser/l10n/uno/ca.json
+++ b/browser/l10n/uno/ca.json
@@ -262,7 +262,7 @@
     "Change Position": "Canvia la posició",
     "Change Slide Master...": "Canvia la diapositiva mestra...",
     "Change View": "Canvia la visualització",
-    "Chapter ~Numbering...": "~Numeració de capítols...",
+    "Chapter ~Numbering...": "~Numeració d'encapçalaments...",
     "Character": "Caràcter",
     "Character Font Effects...": "Efectes de caràcter...",
     "Character Font Position...": "Posició dels caràcters de lletra...",
