--- a/browser/l10n/uno/de.json
+++ b/browser/l10n/uno/de.json
@@ -519,10 +519,10 @@
     "Delete History": "Historie löschen",
     "Delete Layer": "Ebene ~löschen",
     "Delete Legend": "Legende löschen",
-    "Delete Major Grid": "Hauptgitter löschen",
+    "Delete Major Grid": "Hauptgitterlinien löschen",
     "Delete Master": "Master ~löschen",
     "Delete Mean ~Value Line": "Mittel~wertlinie löschen",
-    "Delete Minor Grid": "Hilfsgitter löschen",
+    "Delete Minor Grid": "Hilfsgitterlinien löschen",
     "Delete Page Breaks": "Seitenumbrüche löschen",
     "Delete Page ~Break": "Seitenu~mbruch löschen",
     "Delete Points": "Punkte löschen",
@@ -588,7 +588,7 @@
     "Directly to Document End": "Direkt zum Dokumentende",
     "Disappear": "Verschwinden",
     "Disco~nnect": "Verbindung s~chließen",
-    "Display Grid": "Gitter anzeigen",
+    "Display Grid": "Raster anzeigen",
     "Display Views": "Ansichten anzeigen",
     "Dissolve": "Auflösen",
     "Dissolve In": "Auflösen",
@@ -629,7 +629,7 @@
     "Drop Caps": "Initialen",
     "Drop-Down Form Field": "Dropdown-Steuerelement",
     "Duplicate Page": "Seite do~ppeln",
-    "Duplicate Sheet": "Tabelle verdoppeln",
+    "Duplicate Sheet": "Tabelle duplizieren",
     "Duplicate ~Slide": "Folie do~ppeln",
     "Duplicat~e...": "~Vervielfältigen…",
     "D~elete Page": "~Seite löschen",
@@ -886,9 +886,9 @@
     "Format Floor...": "Diagrammboden formatieren…",
     "Format Legend": "Legende formatieren",
     "Format Legend...": "Legende formatieren…",
-    "Format Major Grid...": "Hauptgitter formatieren…",
+    "Format Major Grid...": "Hauptgitterlinien formatieren…",
     "Format Mean Value Line...": "Mittelwertlinie formatieren…",
-    "Format Minor Grid...": "Hilfsgitter formatieren…",
+    "Format Minor Grid...": "Hilfsgitterlinien formatieren…",
     "Format Page": "Seite formatieren",
     "Format Pa~ge...": "Se~itenformat…",
     "Format Selection...": "A~uswahl formatieren…",
@@ -1017,7 +1017,7 @@
     "Gradient tool": "Farbverlauf-Werkzeug",
     "Graphic Size Check...": "Grafikgröße prüfen…",
     "Green": "Grünanteil",
-    "Grid": "Gitter",
+    "Grid": "Raster",
     "Grid to ~Front": "Raster im ~Vordergrund",
     "Group": "Gruppieren",
     "Group Box": "Gruppenfeld",
@@ -1068,7 +1068,7 @@
     "Honeycomb": "Bienenwabe",
     "Horizontal": "Horizontal",
     "Horizontal Figure 8": "Horizontale Acht",
-    "Horizontal Grids": "Horizontale Gitter",
+    "Horizontal Grids": "Horizontale Gitterlinien",
     "Horizontal In": "Horizontal hinein",
     "Horizontal Line": "~Horizontale Linie",
     "Horizontal Out": "Horizontal heraus",
@@ -1175,10 +1175,10 @@
     "Insert Layer": "Ebene einfügen",
     "Insert Legend": "Legende einfügen",
     "Insert Line": "Linie einfügen",
-    "Insert Major Grid": "Hauptgitter einfügen",
+    "Insert Major Grid": "Hauptgitterlinien einfügen",
     "Insert Manual Row Break": "Manuellen ~Zeilenumbruch einfügen",
     "Insert Mean ~Value Line": "~Mittelwertlinie einfügen",
-    "Insert Minor Grid": "Hilfsgitter einfügen",
+    "Insert Minor Grid": "Hilfsgitterlinien einfügen",
     "Insert Mode": "Einfügemodus",
     "Insert N~arrow No-break Space": "~Schmales geschütztes Leerzeichen",
     "Insert OLE Object": "OLE-Objekt einfügen",
@@ -1516,7 +1516,7 @@
     "Open Clip Art and Media Gallery": "Clip-Art- und Medien-Gallery öffnen",
     "Open Database Object...": "Datenbankobjekt öffnen…",
     "Open Hyperlink": "Hyperlink öffnen",
-    "Open Remote File": "Datei auf Server öffnen",
+    "Open Remote File": "Datei vom Server öffnen",
     "Open Templates Manager": "Vorlagenverwaltung öffnen",
     "Open dialog to insert OLE object": "Dialog öffnen, um OLE-Objekt einzufügen",
     "Open in Design Mode": "Im Entwu~rfsmodus öffnen",
@@ -2493,7 +2493,7 @@
     "Vertical": "Vertikal",
     "Vertical Callouts": "Vertikale Legende",
     "Vertical Figure 8": "Vertikale Acht",
-    "Vertical Grids": "Vertikale Gitter",
+    "Vertical Grids": "Vertikale Gitterlinien",
     "Vertical Highlight": "Vertikales Highlight",
     "Vertical In": "Vertikal hinein",
     "Vertical Line": "~Vertikale Linie",
@@ -2534,11 +2534,11 @@
     "Wrap Contour On": "Konturumlauf ein",
     "Wrap First Paragraph": "Umlauf erster Absatz",
     "Wrap Text": "Te~xt umbrechen",
-    "X Axis ~Minor Grid...": "Hilfsgitter X-A~chse…",
+    "X Axis ~Minor Grid...": "Hilfsgitterlinien X-A~chse…",
     "X Error ~Bars...": "~X-Fehlerbalken…",
-    "Y Axis Minor ~Grid...": "Hilfsgitter Y-Ac~hse…",
+    "Y Axis Minor ~Grid...": "Hilfsgitterlinien Y-Ac~hse…",
     "Y Error ~Bars...": "~Y-Fehlerbalken…",
-    "Z Ax~is Minor Grid...": "Hilfsgitter Z-Ach~se…",
+    "Z Ax~is Minor Grid...": "Hilfsgitterlinien Z-Ach~se…",
     "Zigzag": "Zickzack",
     "Zoom": "Maßstab",
     "Zoom & Pan": "~Vergrößern und Verschieben",
@@ -2562,7 +2562,7 @@
     "~Address Book Source...": "Adressbuch~quelle…",
     "~Advanced Filter...": "S~pezialfilter…",
     "~All Axes...": "~Alle Achsen…",
-    "~All Grids...": "~Alle Gitter…",
+    "~All Grids...": "~Alle Gitterlinien…",
     "~All Titles...": "~Alle Titel…",
     "~Analysis of Variance (ANOVA)...": "~Varianzanalyse (ANOVA)…",
     "~Arrange": "An~ordnung",
@@ -2696,8 +2696,8 @@
     "~Go to Sheet...": "~Zu Tabelle…",
     "~Goal Seek...": "Ziel~wertsuche…",
     "~Grayscale": "~Graustufen",
-    "~Grid": "~Gitter",
-    "~Grids...": "~Gitter…",
+    "~Grid": "~Gitterlinien",
+    "~Grids...": "~Gitterlinien…",
     "~Group": "~Gruppierung",
     "~Group and Outline": "~Gruppierung und Gliederung",
     "~Group...": "~Gruppieren…",
@@ -2931,15 +2931,15 @@
     "~Wizards": "~Assistenten",
     "~Word Count...": "~Wortzählung…",
     "~Wrap": "Umlau~f",
-    "~X Axis Major Grid...": "Hauptgitter ~X-Achse…",
+    "~X Axis Major Grid...": "Hauptgitterlinien ~X-Achse…",
     "~X Axis Title...": "~X-Achsentitel…",
     "~X Axis...": "~X-Achse…",
     "~XML Filter Settings...": "~XML-Filtereinstellungen…",
     "~XML Source...": "~XML-Quelle…",
-    "~Y Axis Major Grid...": "Hauptgitter ~Y-Achse…",
+    "~Y Axis Major Grid...": "Hauptgitterlinien ~Y-Achse…",
     "~Y Axis Title...": "~Y-Achsentitel…",
     "~Y Axis...": "~Y-Achse…",
-    "~Z Axis Major Grid...": "Hauptgitter ~Z-Achse…",
+    "~Z Axis Major Grid...": "Hauptgitterlinien ~Z-Achse…",
     "~Z Axis Title...": "~Z-Achsentitel…",
     "~Z Axis...": "~Z-Achse…",
     "~Z-test...": "~Gauß-Test…",
