--- a/browser/l10n/uno/dsb.json
+++ b/browser/l10n/uno/dsb.json
@@ -2190,7 +2190,7 @@
     "Sub~totals...": "~Mjazyrezultaty...",
     "Sum": "Suma",
     "Sun": "Słyńco",
-    "Superscript": "Górjej stajony",
+    "Superscript": "Wušej stajony",
     "Surface": "Pówjerch",
     "Su~btitle": "Pó~dtitel",
     "Su~mmary Slide": "Pśeg~lědowa folija",
