--- a/browser/l10n/uno/es.json
+++ b/browser/l10n/uno/es.json
@@ -40,7 +40,7 @@
     "Accept All Changes": "Aceptar todos los cambios",
     "Accept All Tracked Changes": "Aceptar todos los cambios rastreados",
     "Accept Change": "Aceptar cambio",
-    "Accept Track Change": "Aceptar cambio",
+    "Accept Track Change": "Aceptar cambio rastreado",
     "Accept Track Change and select the next one": "Aceptar cambio rastreado y seleccionar el siguiente",
     "Accept and Move to Next": "Aceptar y pasar al siguiente",
     "Across": "A lo ancho",
@@ -157,7 +157,7 @@
     "AutoTransition": "Transición automática",
     "Autofit Text": "Ajuste automático de texto",
     "Automatic Accessibility Checking": "Revisión de accesibilidad automática",
-    "Automatic A~ccessibility Checking": "Automatic A~ccessibility Checking",
+    "Automatic A~ccessibility Checking": "Revisión de accesibilidad automática",
     "Automatic Control Focus": "Foco de control automático",
     "Automatic Layout": "Disposición automática",
     "Auto~Calculate": "~Cálculo automático",
@@ -749,7 +749,7 @@
     "Fall and fade out": "Caída y desvanecimiento",
     "Fall simulated": "Caída simulada",
     "Falling In": "Caer dentro",
-    "Field ~Hidden Paragraphs": "Campo párrafos ~ocultos",
+    "Field ~Hidden Paragraphs": "Párrafos ~ocultos",
     "Fields": "Campos",
     "Fiel~d": "Campo",
     "Fie~ld Shadings": "~Marcar campos",
@@ -1737,7 +1737,7 @@
     "Reject All Changes": "Rechazar todos los cambios",
     "Reject All Tracked Changes": "Rechazar todos los cambios rastreados",
     "Reject Change": "Rechazar cambio",
-    "Reject Track Change": "Rechazar cambio",
+    "Reject Track Change": "Rechazar cambio rastreado",
     "Reject Track Change and select the next one": "Rechazar cambio rastreado y seleccionar el siguiente",
     "Reject and Move to Next": "Rechazar y pasar al siguiente",
     "Relationships...": "Relaciones…",
@@ -1879,7 +1879,7 @@
     "Scale Screen Display": "Escala de la pantalla",
     "Scale Text": "Escala de texto",
     "Scaling Factor": "Factor de escala",
-    "Scaling at the current document": "Scaling at the current document",
+    "Scaling at the current document": "Escala en el documento actual",
     "Scan": "Escanear",
     "Scientific": "Científico",
     "Scrollbar": "Barra de desplazamiento",
@@ -2470,12 +2470,12 @@
     "Update All": "Actualizar todo",
     "Update Chart": "Actualizar gráfico",
     "Update Index": "Actualizar índice",
-    "Update Indexes and ~Tables": "Update Indexes and ~Tables",
+    "Update Indexes and ~Tables": "Actualizar índices y sumarios",
     "Update Input Fields": "Actualizar campos para entradas",
     "Update Page Formatting": "Actualizar formato de página",
     "Update ~Charts": "Actualizar ~gráficos",
     "Update ~Fields": "Actualizar ~campos",
-    "Update ~Index": "Update ~Index",
+    "Update ~Index": "Actualizar índ~ice",
     "Update ~Links": "Actualizar ~enlaces",
     "Use Text Import Dialog": "Utilizar diálogo de importación de texto",
     "Use header\/footer menu": "Menú emergente de cabecera\/pie",
@@ -2780,7 +2780,7 @@
     "~Object Bar": "Barra de ~objetos",
     "~Open Local Copy": "~Abrir copia local",
     "~Open...": "~Abrir…",
-    "~Optimal": "Óptim~o",
+    "~Optimal": "~Ideal",
     "~Optimal Column Width...": "Anchura óptima ~de columna…",
     "~Optimal Height...": "Altura ó~ptima...",
     "~Optimal Row Height...": "Altura óptima de filas…",
