--- a/browser/l10n/uno/fi.json
+++ b/browser/l10n/uno/fi.json
@@ -507,7 +507,7 @@
     "Delete All Comments": "Poista kaikki huomautukset",
     "Delete All Comments by This Author": "Poista tämän käyttäjän huomautukset",
     "Delete Axis": "Poista akseli",
-    "Delete Columns": "Delete Columns",
+    "Delete Columns": "Poista sarakkeet",
     "Delete Comment": "Poista huomautus",
     "Delete Comment Thread": "Delete Comment Thread",
     "Delete C~ells...": "Pois~ta solut...",
@@ -551,7 +551,7 @@
     "Delete to Start of Sentence": "Poista virkkeen alkuun",
     "Delete to Start of Word": "Poista sanan alkuun",
     "Delete ~All Comments": "Poista kaikki huomautukset",
-    "Delete ~Columns": "Delete ~Columns",
+    "Delete ~Columns": "Poista sarakkeet",
     "Delete ~Record": "Poista ti~etue",
     "Delete ~Rows": "Poista rivit",
     "Demote": "Alenna",
@@ -1620,7 +1620,7 @@
     "Pixel Mode": "Kuvapistetila",
     "Pi~vot Table...": "Pivot-taulukko...",
     "Plain": "Yksinkertainen",
-    "Plain Text": "Pelkkää tekstiä",
+    "Plain Text": "Muotoilematon teksti",
     "Plus": "Plussan muodossa",
     "Pointy Star": "Suunnattu tähti",
     "Poi~nts": "Pisteet",
@@ -1840,7 +1840,7 @@
     "Rounded Square, Unfilled": "Pyöristetty neliö, täyttämätön",
     "Row": "Rivi",
     "Row Header": "Rivin otsikko",
-    "Row Height...": "Rivikorkeus...",
+    "Row Height...": "Rivin korkeus...",
     "Row to ~Break Across Pages": "Rivi voi jakautua usealle sivulle",
     "Row ~Height...": "Rivikorkeus...",
     "Rows ~Above": "Riveinä yläpuolelle",
