--- a/browser/l10n/uno/fr.json
+++ b/browser/l10n/uno/fr.json
@@ -125,7 +125,7 @@
     "Arch Right (Pour)": "Arc étiré vers la droite",
     "Arch Up (Curve)": "Arc vers le haut (courbe)",
     "Arch Up (Pour)": "Arc étiré vers le haut",
-    "Area": "Area",
+    "Area": "Zone",
     "Area Style \/ Filling": "Style de remplissage",
     "Arrange": "Disposer",
     "Arrange~ment": "~Disposition",
@@ -156,8 +156,8 @@
     "AutoTe~xt...": "~AutoTexte...",
     "AutoTransition": "Transition automatique",
     "Autofit Text": "Adapter automatiquement le texte",
-    "Automatic Accessibility Checking": "Automatic Accessibility Checking",
-    "Automatic A~ccessibility Checking": "Automatic A~ccessibility Checking",
+    "Automatic Accessibility Checking": "Vérification automatique de l'accessibilité",
+    "Automatic A~ccessibility Checking": "Vérification automatique de l'a~ccessibilité",
     "Automatic Control Focus": "Focalisation automatique sur le contrôle",
     "Automatic Layout": "Réorganiser le diagramme",
     "Auto~Calculate": "~Calculer automatiquement",
@@ -206,7 +206,7 @@
     "Boomerang": "Boomerang",
     "Border Color": "Couleur de bordure",
     "Border Style": "Style de bordure",
-    "Borders": "Borders",
+    "Borders": "Bordures",
     "Borders (Shift to overwrite)": "Bordures (Maj pour écraser)",
     "Bottom": "Bas",
     "Bottom Align on Section": "Aligner en bas de la section",
@@ -263,7 +263,7 @@
     "Change Slide Master...": "Changer de diapo maîtresse...",
     "Change View": "Modifier l'affichage",
     "Chapter ~Numbering...": "~Numérotation des chapitres...",
-    "Character": "Character",
+    "Character": "Caractère",
     "Character Font Effects...": "Effets de caractère...",
     "Character Font Position...": "Position de caractère...",
     "Character Highlighting Color": "Couleur de mise en évidence des caractères",
@@ -341,8 +341,8 @@
     "Column Header": "En-tête de colonne",
     "Column ~Width...": "~Largeur de colonne...",
     "Columns": "Colonnes",
-    "Columns A~fter": "Columns A~fter",
-    "Columns B~efore": "Columns B~efore",
+    "Columns A~fter": "Colonnes a~près",
+    "Columns B~efore": "Colonnes a~vant",
     "Columns ~After": "Colonnes après",
     "Columns ~Before": "Colonnes a~vant",
     "Colu~mn": "Colo~nne",
@@ -472,7 +472,7 @@
     "Data Series": "Séries de données",
     "Data Source of Current Document": "Source de données du document actif",
     "Data Streams": "Flux de données",
-    "Data Table...": "Data Table...",
+    "Data Table...": "Table de données...",
     "Data in Columns": "Données en colonnes",
     "Data in Rows": "Données en lignes",
     "Data source as Table": "Source de données comme table",
@@ -513,7 +513,7 @@
     "Delete C~ells...": "Suppr~imer des cellules...",
     "Delete C~ontents...": "Supprimer du ~contenu...",
     "Delete Data Labels": "Supprimer les étiquettes de données",
-    "Delete Data Table": "Delete Data Table",
+    "Delete Data Table": "Supprimer la table de données",
     "Delete Decimal Place": "Supprimer une décimale",
     "Delete Frame": "Supprimer le cadre",
     "Delete History": "Supprimer l'historique",
@@ -929,7 +929,7 @@
     "Fo~rm": "Fo~rmulaire",
     "Fo~rm Control": "Contrôle de fo~rmulaire",
     "Frame": "Cadre",
-    "Frame Properties": "Frame Properties",
+    "Frame Properties": "Propriétés du cadre",
     "Frame and Ob~ject": "Cadre et ob~jet",
     "Frame or Object Properties": "Propriétés de l'objet ou du cadre",
     "FrameSet Spacing": "Espacement du jeu de cadres",
@@ -1096,7 +1096,7 @@
     "Image Filter": "Filtre d'image",
     "Image Mode": "Mode image",
     "Image Placeholders": "Substituants d'image",
-    "Image Properties": "Image Properties",
+    "Image Properties": "Propriétés de l'image",
     "Image...": "Image...",
     "Image~Map": "Image ~Map",
     "Import BASIC...": "Importer du BASIC...",
@@ -1142,7 +1142,7 @@
     "Insert Columns Before": "Insérer des colonnes avant",
     "Insert Columns ~After": "Insérer des colonnes ~après",
     "Insert Columns ~Before": "Insérer des colonnes a~vant",
-    "Insert Combo Box Content Control": "Insert Combo Box Content Control",
+    "Insert Combo Box Content Control": "Insérer un contrôle de contenu Boîte combinée",
     "Insert Command": "Insérer une commande",
     "Insert Comment": "Insérer un commentaire",
     "Insert Controls": "Insérer des éléments de contrôle",
@@ -1153,7 +1153,7 @@
     "Insert Current Date": "Insérer la date actuelle",
     "Insert Current Time": "Insérer l'heure actuelle",
     "Insert Data Labels": "Insérer des étiquettes de données",
-    "Insert Data Table": "Insert Data Table",
+    "Insert Data Table": "Insérer une table de données",
     "Insert Date Content Control": "Insérer un contrôle de contenu Date",
     "Insert Drop-Down List Content Control": "Insérer un contrôle de contenu Liste déroulante",
     "Insert Ellipse": "Insérer une ellipse",
@@ -1189,7 +1189,7 @@
     "Insert Page ~Break": "Insérer un saut de ~page",
     "Insert Paragraph": "Insérer un paragraphe",
     "Insert Picture Content Control": "Insérer un contrôle de contenu Image",
-    "Insert Plain Text Content Control": "Insert Plain Text Content Control",
+    "Insert Plain Text Content Control": "Insérer un contrôle de contenu Texte brut",
     "Insert Points": "Insérer des points",
     "Insert Rectangle": "Insérer un rectangle",
     "Insert Rich Text Content Control": "Insérer un contrôle de contenu Texte enrichi",
@@ -1223,13 +1223,13 @@
     "Insert Vertical Text": "Insérer un texte vertical",
     "Insert X Error ~Bars...": "Insérer des ~barres d'erreur X...",
     "Insert Y Error ~Bars...": "Insérer des barres d'erreur ~Y...",
-    "Insert columns after": "Insert columns after",
-    "Insert columns before": "Insert columns before",
+    "Insert columns after": "Insérer des colonnes après",
+    "Insert columns before": "Insérer des colonnes avant",
     "Insert non-br~eaking hyphen": "Insérer un tir~et insécable",
     "Insert or Edit Formula": "Insérer ou éditer une formule",
     "Insert or Edit Pivot Table": "Insérer ou éditer une table dynamique",
-    "Insert rows above": "Insert rows above",
-    "Insert rows below": "Insert rows below",
+    "Insert rows above": "Insérer des lignes au-dessus",
+    "Insert rows below": "Insérer des lignes au-dessous",
     "Insert single-column frame manually": "Insérer manuellement un cadre à une colonne",
     "Insert s~oft Hyphen": "Insérer un trait d'uni~on conditionnel",
     "Insert ~Cells...": "Insérer des ~cellules...",
@@ -1295,7 +1295,7 @@
     "Lighting": "Éclairage",
     "Lightning Bolt": "Éclair",
     "Limit": "Limite",
-    "Line": "Line",
+    "Line": "Ligne",
     "Line (45°)": "Ligne (45°)",
     "Line Callout 1": "Légende 1",
     "Line Callout 2": "Légende 2",
@@ -1358,7 +1358,7 @@
     "Manage Paragraph Classification": "Gérer la classification des paragraphes",
     "Manage St~yles": "Gérer les st~yles",
     "Manage Templates": "Gérer les modèles",
-    "Manage Track Changes": "Manage Track Changes",
+    "Manage Track Changes": "Gérer les modifications",
     "Manage...": "Gérer...",
     "Manual ~Break...": "~Saut manuel...",
     "Margins": "Marges",
@@ -1504,7 +1504,7 @@
     "Numerical Field": "Champ numérique",
     "OLE Object": "Objet OLE",
     "OLE Object Insert Menu": "Menu d'insertion des objets OLE",
-    "OLE Object Properties": "OLE Object Properties",
+    "OLE Object Properties": "Propriétés de l'objet OLE",
     "OLE Ob~ject": "Ob~jet OLE",
     "Object Catalog": "Catalogue d'objets",
     "Object Resizing": "Redimensionnement d'objet",
@@ -1521,7 +1521,7 @@
     "Open dialog to insert OLE object": "Ouvrir une boîte de dialogue pour insérer un objet OLE",
     "Open in Design Mode": "Ouvrir en mode Ébauche",
     "Open the Custom Animation Deck": "Ouvrir le panneau Animations personnalisées",
-    "Open the Elements Deck": "Open the Elements Deck",
+    "Open the Elements Deck": "Ouvrir le panneau Éléments",
     "Open the Functions Deck": "Ouvrir le panneau des fonctions",
     "Open the Gallery Deck": "Ouvrir le panneau Galerie",
     "Open the Master Slides Deck": "Ouvrir le panneau Diapos maîtresses",
@@ -1591,7 +1591,7 @@
     "Page ~Count": "Nom~bre de pages",
     "Pag~e": "Pag~e",
     "Paired ~t-test...": "~Test-t apparié...",
-    "Paragraph": "Paragraph",
+    "Paragraph": "Paragraphe",
     "Paragraph Style": "Style de paragraphe",
     "Parallelogram": "Parallélogramme",
     "Paste As Link": "Coller comme lien",
@@ -1630,7 +1630,7 @@
     "Polygon, Filled": "Polygone, rempli",
     "Pop Art": "Pop'art",
     "Position": "Position",
-    "Position and Size": "Position and Size",
+    "Position and Size": "Position et taille",
     "Position and Si~ze...": "Position et tail~le...",
     "Position in Document": "Position dans le document",
     "Posterize": "Poster",
@@ -2012,12 +2012,12 @@
     "Show Insertions In Margin": "Afficher les insertions dans la marge",
     "Show Navigator Window": "Afficher le Navigateur",
     "Show Only First Level": "Afficher uniquement le premier niveau",
-    "Show Outline Content up to Level...": "Show Outline Content up to Level...",
+    "Show Outline Content up to Level...": "Afficher le contenu du plan jusqu'au niveau...",
     "Show Subpoints": "Afficher les sous-points",
     "Show Tip of the Day": "Afficher l'astuce du jour",
     "Show Track Changes": "Afficher les modifications",
     "Show Track Changes Functions": "Afficher les fonctions de suivi des modifications",
-    "Show Tracked ~Changes": "Show Tracked ~Changes",
+    "Show Tracked ~Changes": "Afficher les ~modifications",
     "Show Whitespac~e": "Afficher les espac~es vides",
     "Show change authorship in tooltips": "Afficher l'auteur des modifications dans les infobulles.",
     "Show outline-folding buttons": "Afficher les boutons de pliage du plan",
@@ -2130,17 +2130,17 @@
     "Stairs Down": "Escalier descendant",
     "Standard": "Standard",
     "Standard (Single Mode)": "Standard (mode compact)",
-    "Standard (Single Mode) - Comment": "Standard (Single Mode) - Comment",
-    "Standard (Single Mode) - Form Control": "Standard (Single Mode) - Form Control",
-    "Standard (Single Mode) - Frame": "Standard (Single Mode) - Frame",
-    "Standard (Single Mode) - Image": "Standard (Single Mode) - Image",
-    "Standard (Single Mode) - Media": "Standard (Single Mode) - Media",
-    "Standard (Single Mode) - OLE Object": "Standard (Single Mode) - OLE Object",
-    "Standard (Single Mode) - Print Preview": "Standard (Single Mode) - Print Preview",
-    "Standard (Single Mode) - Shape": "Standard (Single Mode) - Shape",
-    "Standard (Single Mode) - Shape Text": "Standard (Single Mode) - Shape Text",
-    "Standard (Single Mode) - Table": "Standard (Single Mode) - Table",
-    "Standard (Single Mode) - Text": "Standard (Single Mode) - Text",
+    "Standard (Single Mode) - Comment": "Standard (Mode simple) - Commentaire",
+    "Standard (Single Mode) - Form Control": "Standard (Mode simple) - Contrôle de formulaire",
+    "Standard (Single Mode) - Frame": "Standard (Mode simple) - Cadre",
+    "Standard (Single Mode) - Image": "Standard (Mode simple) - Image",
+    "Standard (Single Mode) - Media": "Standard (Mode simple) - Média",
+    "Standard (Single Mode) - OLE Object": "Standard (Mode simple) - Objet OLE",
+    "Standard (Single Mode) - Print Preview": "Standard (Mode simple) - Aperçu",
+    "Standard (Single Mode) - Shape": "Standard (Mode simple) - Forme",
+    "Standard (Single Mode) - Shape Text": "Standard (Mode simple) - Texte de la forme",
+    "Standard (Single Mode) - Table": "Standard (Mode simple) - Tableau",
+    "Standard (Single Mode) - Text": "Standard (Mode simple) - Texte",
     "Standard (Viewing Mode)": "Standard (mode d'affichage)",
     "Standard Filter...": "Filtre standard...",
     "Standard Text Attributes": "Attributs de texte standard",
@@ -2225,7 +2225,7 @@
     "Table Design": "Ébauche de tableau",
     "Table Design...": "Ébauche de tableau...",
     "Table Filter...": "Filtre de table...",
-    "Table Properties": "Table Properties",
+    "Table Properties": "Propriétés du tableau",
     "Table Styles": "Styles de tableau",
     "Table Wizard...": "Assistant Table...",
     "Table name": "Nom de la table",
@@ -2260,7 +2260,7 @@
     "Text Object": "Objet de texte",
     "Text Placeholders": "Substituants de texte",
     "Text Status": "Statut de texte",
-    "Text Wrap": "Text Wrap",
+    "Text Wrap": "Habillage du texte",
     "Text Wrap...": "Habillage du texte...",
     "Text direction from left to right": "Orientation du texte de gauche à droite",
     "Text direction from top to bottom": "Orientation du texte de haut en bas",
@@ -2390,7 +2390,7 @@
     "To ~Metafile": "En ~métafichier",
     "To ~Paragraph": "Au ~paragraphe",
     "To ~Polygon": "En ~polygone",
-    "Toggle Automatic Accessibility Checking": "Toggle Automatic Accessibility Checking",
+    "Toggle Automatic Accessibility Checking": "Basculer la vérification automatique de l'accessibilité",
     "Toggle Automatic Spell Checking": "Basculer la correction orthographique automatique",
     "Toggle Design Mode": "Basculer le mode conception",
     "Toggle Direct Cursor Mode": "Basculer le mode curseur direct",
