--- a/browser/l10n/uno/gl.json
+++ b/browser/l10n/uno/gl.json
@@ -2795,7 +2795,7 @@
     "~Page": "~Páxina",
     "~Page Break": "Quebra de ~páxina",
     "~Page Number": "Número de ~páxina",
-    "~Page Numbers...": "Número de ~páxina...",
+    "~Page Numbers...": "Números de ~páxina...",
     "~Page Pane": "Panel de ~páxinas",
     "~Page Style...": "Estilo de ~páxina...",
     "~Page...": "~Páxina...",
