--- a/browser/l10n/uno/he.json
+++ b/browser/l10n/uno/he.json
@@ -132,7 +132,7 @@
     "Arrow Shapes": "צורות חצים",
     "Arrow Style": "סגנון חץ",
     "As C~haracter": "לתו",
-    "As ~Link": "As ~Link",
+    "As ~Link": "כ~קישור",
     "Ascend": "עולה",
     "Ascending": "סדר עולה",
     "Asian Phonetic G~uide...": "מדריך לפונטיקת המזרח הרחוק",
@@ -472,7 +472,7 @@
     "Data Series": "סדרת נתונים",
     "Data Source of Current Document": "מקור הנתונים של המסמך הנוכחי",
     "Data Streams": "תזרימי נתונים",
-    "Data Table...": "Data Table...",
+    "Data Table...": "טבלת נתונים…",
     "Data in Columns": "נתונים בעמודות",
     "Data in Rows": "נתונים בשורות",
     "Data source as Table": "מקור נתונים כטבלה",
@@ -494,13 +494,13 @@
     "Decrease Paragraph Spacing": "הקטנת ריווח בין הפסקאות",
     "Decrease Size": "הקטנה",
     "Decrement Indent Value": "הקטנת הזחה",
-    "Default": "בררת מחדל",
-    "Default Cell Style": "סגנון תא כבררת מחדל",
+    "Default": "ברירת מחדל",
+    "Default Cell Style": "סגנון תא כברירת מחדל",
     "Default Colors for Data Series": "צבעי בררת המחדל לסדרת הנתונים",
-    "Default Paragraph Style": "סגנון פסקה כבררת מחדל",
+    "Default Paragraph Style": "סגנון פסקה כברירת מחדל",
     "Default Table Style": "Default Table Style",
-    "Default ~Character": "תו ~בררת מחדל",
-    "Default ~Paragraph": "פסקת ~בררת מחדל",
+    "Default ~Character": "תו ~ברירת מחדל",
+    "Default ~Paragraph": "פסקת ~ברירת מחדל",
     "Define Print Area": "הגדרת אזור הדפסה",
     "Define ~Labels...": "הגדרת מדבקות...‏",
     "Delete": "מחיקה",
@@ -513,7 +513,7 @@
     "Delete C~ells...": "מחיקת תאים...‏",
     "Delete C~ontents...": "מחיקת תוכן",
     "Delete Data Labels": "מחיקת תוויות נתונים",
-    "Delete Data Table": "Delete Data Table",
+    "Delete Data Table": "מחיקת טבלת נתונים",
     "Delete Decimal Place": "מחיקת מקום עשרוני",
     "Delete Frame": "מחיקת מסגרת",
     "Delete History": "מחיקת היסטוריה",
@@ -589,7 +589,7 @@
     "Disappear": "נעלם",
     "Disco~nnect": "~ניתוק",
     "Display Grid": "הצגת רשת",
-    "Display Views": "הצגת שדה",
+    "Display Views": "הצגת תצוגות",
     "Dissolve": "מתמוסס",
     "Dissolve In": "נמס פנימה",
     "Distinct Values": "ערכים נבדלים",
@@ -629,7 +629,7 @@
     "Drop Caps": "אות פתיח",
     "Drop-Down Form Field": "Drop-Down Form Field",
     "Duplicate Page": "שכפול עמוד",
-    "Duplicate Sheet": "Duplicate Sheet",
+    "Duplicate Sheet": "שכפול גיליון",
     "Duplicate ~Slide": "ש~כפול שקופית",
     "Duplicat~e...": "שכפול...‏",
     "D~elete Page": "~מחיקת עמוד",
@@ -693,7 +693,7 @@
     "Error Bar": "סרגל שגיאות",
     "Error Cell Style": "סגנון תא שגיאה",
     "Euro Converter": "המרה לאירו",
-    "Exchange Data~base...": "החלפת מסד נתונים...",
+    "Exchange Data~base...": "ה~חלפת מסד נתונים…",
     "Exciting": "מלהיב",
     "Exclude Mail Merge Entry": "Exclude Mail Merge Entry",
     "Execute Report...": "הפעלת דוח…",
@@ -713,9 +713,9 @@
     "Export Directly as EPUB": "ייצוא ישיר כ־PDF",
     "Export Directly as PDF": "יצוא ישיר כ־PDF",
     "Export Directly to PDF as Bitmap": "Export Directly to PDF as Bitmap",
-    "Export Preview PDF": "Export Preview PDF",
-    "Export Redacted PDF (Black)": "Export Redacted PDF (Black)",
-    "Export Redacted PDF (White)": "Export Redacted PDF (White)",
+    "Export Preview PDF": "ייצוא PDF לתצוגה מקדימה",
+    "Export Redacted PDF (Black)": "ייצוא PDF מצומצם (שחור)",
+    "Export Redacted PDF (White)": "ייצוא PDF מצומצם (לבן)",
     "Export as EPUB": "ייצוא כ־EPUB",
     "Export as E~PUB...": "ייצוא ~כ־EPUB…",
     "Export as Image": "ייצוא כתמונה",
@@ -725,7 +725,7 @@
     "Extrusion": "שיחול",
     "Extrusion Depth": "עומק השיחול",
     "E~dit Mode": "מצב ~עריכה",
-    "E~dit Style...": "~עריכת סגנון...‏",
+    "E~dit Style...": "~עריכת סגנון…",
     "E~mphasis": "ה~דגשה",
     "E~xecute Interaction...": "E~xecute Interaction...",
     "E~xit": "יציאה",
@@ -1058,7 +1058,7 @@
     "Hexagon": "משושה",
     "He~ader": "כותרת עליונה",
     "He~ader and Footer": "כותרת ~עליונה ותחתונה",
-    "Hidden Row\/Column Indicator": "Hidden Row\/Column Indicator",
+    "Hidden Row\/Column Indicator": "מחוון שורות\/עמודות מוסתרות",
     "Hide": "הסתרה",
     "Hide All Comments": "הסתרת כל ההערות",
     "Hide Comment": "הסתרת הערה",
@@ -1136,7 +1136,7 @@
     "Insert Column": "Insert Column",
     "Insert Column After": "הוסף עמודה אחרי",
     "Insert Column Before": "הוסף עמודה לפני",
-    "Insert Column Break": "הכנסת מעבר עמודה",
+    "Insert Column Break": "הוספת מעבר עמודה",
     "Insert Columns": "הוסף עמודות",
     "Insert Columns After": "Insert Columns After",
     "Insert Columns Before": "Insert Columns Before",
@@ -1153,7 +1153,7 @@
     "Insert Current Date": "הוספת התאריך הנוכחי",
     "Insert Current Time": "הוספת השעה הנוכחית",
     "Insert Data Labels": "הוספת תוויות נתונים",
-    "Insert Data Table": "Insert Data Table",
+    "Insert Data Table": "הוספת טבלת נתונים",
     "Insert Date Content Control": "Insert Date Content Control",
     "Insert Drop-Down List Content Control": "Insert Drop-Down List Content Control",
     "Insert Ellipse": "הוספת אליפסה",
@@ -1172,7 +1172,7 @@
     "Insert Image...": "הוספת תמונה…",
     "Insert Index Entry": "הכנסת מפתח",
     "Insert Labels": "הכנסת תוויות",
-    "Insert Layer": "הכנסת תוויות",
+    "Insert Layer": "הוספת שכבה",
     "Insert Legend": "הוספת מקרא...‏",
     "Insert Line": "הכנסת תוויות",
     "Insert Major Grid": "הוספת רשת ראשית",
@@ -1387,7 +1387,7 @@
     "Merge Documen~t...": "מי~זוג מסמך…",
     "Merge Table": "מיזוג טבלה",
     "Merge Track Changed Document": "Merge Track Changed Document",
-    "Merge and center or unmerge cells depending on the current toggle state": "Merge and center or unmerge cells depending on the current toggle state",
+    "Merge and center or unmerge cells depending on the current toggle state": "מיזוג ומירכוז או פיצול תאים בהתאם למצב הנוכחי של הבורר",
     "Merges text fragments from selected objects into one new textbox": "ממזג קטעי טקסט מהעצמים הנבחרים לתוך תיבת טקסט חדשה",
     "Me~dia Player": "נ~גן מדיה",
     "Middle on Section": "יישור לאמצע במקטע",
@@ -1395,7 +1395,7 @@
     "Minimal Column Width: Adjust width of selected columns to fit content": "Minimal Column Width: Adjust width of selected columns to fit content",
     "Minimal Row Height": "Minimal Row Height",
     "Minimal Row Height: Adjust height of selected rows to fit content": "Minimal Row Height: Adjust height of selected rows to fit content",
-    "Minimize ~Presentation...": "Minimize ~Presentation...",
+    "Minimize ~Presentation...": "מ~זעור מצגת…",
     "Mirror Object on Even Pages": "שיקוף עצם בעמודים זוגיים",
     "Moderate": "מתון",
     "Modified": "עודכן",
@@ -1434,9 +1434,9 @@
     "MultiSelection On": "בחירה מרובה מופעלת",
     "Multiple Pages Preview": "תצוגה מקדימה למספר עמודים",
     "Multiple Selection": "בחירה מרוכזת",
-    "M~aster Notes": "M~aster Notes",
+    "M~aster Notes": "ה~ערות הורה",
     "M~erge and Center Cells": "מי~זוג ומרכוז התאים",
-    "M~erge and Unmerge Cells": "M~erge and Unmerge Cells",
+    "M~erge and Unmerge Cells": "מיזוג ו~פיצול תאים",
     "Name": "שם",
     "Name...": "שם...‏",
     "Navigate": "Navigate",
@@ -1453,7 +1453,7 @@
     "New FrameSet": "‫FrameSet חדש",
     "New Line": "שורה חדשה",
     "New Master": "מאסטר חדש",
-    "New Page": "העמוד הבא",
+    "New Page": "עמוד חדש",
     "New Presentation": "מצגת חדשה",
     "New Query (~SQL View)": "שאילתה חדשה (ת~צוגת SQL)",
     "New Record": "רשומה חדשה",
@@ -1477,9 +1477,9 @@
     "Notched Right Arrow": "חיץ ימני מחורץ",
     "Note": "הערה",
     "Note Cell Style": "סגנון תא הערה",
-    "Notebookbar": "Notebookbar",
-    "Notebookbar shortcuts": "Notebookbar shortcuts",
-    "Not~es": "הערות",
+    "Notebookbar": "סרגל מחברת",
+    "Notebookbar shortcuts": "קיצורי דרך בסרגל מחברות",
+    "Not~es": "ה~ערות",
     "Number": "מספר",
     "Number Format": "תבנית מספר",
     "Number Format Type": "סוג תבנית מספר",
@@ -1502,7 +1502,7 @@
     "Numbering ivx List Style": "Numbering ivx List Style",
     "Numeric Field": "שדה מספרי",
     "Numerical Field": "שדה מספרי",
-    "OLE Object": "OLE Object",
+    "OLE Object": "עצם OLE",
     "OLE Object Insert Menu": "OLE Object Insert Menu",
     "OLE Object Properties": "OLE Object Properties",
     "OLE Ob~ject": "OLE Ob~ject",
@@ -1594,13 +1594,13 @@
     "Paragraph": "Paragraph",
     "Paragraph Style": "סגנון פסקה",
     "Parallelogram": "מקבילית",
-    "Paste As Link": "Paste As Link",
+    "Paste As Link": "הדבקה כקישור",
     "Paste Only": "הדבקה בלבד",
     "Paste Only Formula": "הדבקת נוסחה בלבד",
     "Paste Only Numbers": "הדבקת מספרים בלבד",
     "Paste Only Text": "הדבקת טקסט בלבד",
     "Paste Special": "הדבקה מיוחדת",
-    "Paste Transposed": "Paste Transposed",
+    "Paste Transposed": "הדבקה משוחלפת",
     "Paste Unformatted Text": "הדבקת טקסט ללא עיצוב",
     "Paste as Columns Before": "Paste as Columns Before",
     "Paste as Nested Table": "Paste as Nested Table",
@@ -1753,9 +1753,9 @@
     "Remove ~Row Break": "הסרת מעבר שורה",
     "Rename": "שינוי שם",
     "Rename Master": "שינוי שם מאסטר",
-    "Rename Page...": "Rename Page...",
+    "Rename Page...": "שינוי שם עמוד…",
     "Rename Sheet": "שינוי שם הגליון",
-    "Rename Slide...": "Rename Slide...",
+    "Rename Slide...": "שינוי שם שקופית…",
     "Rename S~heet...": "~שינוי שם הגיליון…",
     "Rename...": "מתן שם אחר...‏",
     "Repeat Search": "חזרה על חיפוש",
@@ -1920,8 +1920,8 @@
     "Select Tool": "בחירת כלי",
     "Select Unprotected Cells": "בחירת תאים בלתי מוגנים",
     "Select Up": "בחירה כלפי מעלה",
-    "Select Visible Columns Only": "Select Visible Columns Only",
-    "Select Visible Rows Only": "Select Visible Rows Only",
+    "Select Visible Columns Only": "בחירת העמודות הגלויות בלבד",
+    "Select Visible Rows Only": "בחירת השורות הגלויות בלבד",
     "Select Word": "בחירת מילה",
     "Select all Formatted Fields": "בחירת כל השדות המעוצבים",
     "Select all Labels": "בחירת כל התוויות",
@@ -1961,7 +1961,7 @@
     "Selection List": "רשימת בחירה",
     "Selection Mode": "מצב בחירה",
     "Send Back~ward": "שליחה ~אחורה",
-    "Send Default Fax": "שליחת פקס בררת מחדל",
+    "Send Default Fax": "שליחת פקס ברירת מחדל",
     "Send Email Messages": "Send Email Messages",
     "Send Feedback": "שליחת משוב",
     "Send via ~Bluetooth...": "שליחה ~דרך Bluetooth…",
@@ -2008,7 +2008,7 @@
     "Show Formatting": "עיצוב העמוד",
     "Show Formula": "הצגת הנוסחה",
     "Show Gluepoint Functions": "Show Gluepoint Functions",
-    "Show Hidden Row\/Column Indicator": "Show Hidden Row\/Column Indicator",
+    "Show Hidden Row\/Column Indicator": "הצגת מחוון שורות\/עמודות מוסתרות",
     "Show Insertions In Margin": "Show Insertions In Margin",
     "Show Navigator Window": "Show Navigator Window",
     "Show Only First Level": "הצגה של הרמה הראשונה בלבד",
@@ -2065,7 +2065,7 @@
     "Slide to End": "שקופית לסוף",
     "Slide to Start": "שקופית להתחלה",
     "Slide ~Count": "מ~ספר שקופיות",
-    "Slide ~Layout": "מתווה שקופית...‏",
+    "Slide ~Layout": "~פריסת שקופית",
     "Slide ~Pane": "חלונית ~שקופיות",
     "Slide\/Layer": "שקופית\/שכבה",
     "SlideTransition": "מעבר שקופיות",
@@ -2129,18 +2129,18 @@
     "Square, Unfilled": "ריבוע, ללא מילוי",
     "Stairs Down": "מדרגות למטה",
     "Standard": "רגיל",
-    "Standard (Single Mode)": "Standard (Single Mode)",
-    "Standard (Single Mode) - Comment": "Standard (Single Mode) - Comment",
-    "Standard (Single Mode) - Form Control": "Standard (Single Mode) - Form Control",
-    "Standard (Single Mode) - Frame": "Standard (Single Mode) - Frame",
-    "Standard (Single Mode) - Image": "Standard (Single Mode) - Image",
-    "Standard (Single Mode) - Media": "Standard (Single Mode) - Media",
-    "Standard (Single Mode) - OLE Object": "Standard (Single Mode) - OLE Object",
-    "Standard (Single Mode) - Print Preview": "Standard (Single Mode) - Print Preview",
-    "Standard (Single Mode) - Shape": "Standard (Single Mode) - Shape",
-    "Standard (Single Mode) - Shape Text": "Standard (Single Mode) - Shape Text",
-    "Standard (Single Mode) - Table": "Standard (Single Mode) - Table",
-    "Standard (Single Mode) - Text": "Standard (Single Mode) - Text",
+    "Standard (Single Mode)": "רגיל (מצב יחיד)",
+    "Standard (Single Mode) - Comment": "רגיל (מצב יחיד) - הערה",
+    "Standard (Single Mode) - Form Control": "רגיל (מצב יחיד) - פקד בטופס",
+    "Standard (Single Mode) - Frame": "רגיל (מצב יחיד) - מסגרת",
+    "Standard (Single Mode) - Image": "רגיל (מצב יחיד) - תמונה",
+    "Standard (Single Mode) - Media": "רגיל (מצב יחיד) - מדיה",
+    "Standard (Single Mode) - OLE Object": "רגיל (מצב יחיד) - עצם OLE",
+    "Standard (Single Mode) - Print Preview": "רגיל (מצב יחיד) - תצוגה מקדימה להדפסה",
+    "Standard (Single Mode) - Shape": "רגיל (מצב יחיד) - צורה",
+    "Standard (Single Mode) - Shape Text": "רגיל (מצב יחיד) - כתב מעוצב",
+    "Standard (Single Mode) - Table": "רגיל (מצב יחיד) - טבלה",
+    "Standard (Single Mode) - Text": "רגיל (מצב יחיד) - טקסט",
     "Standard (Viewing Mode)": "רגיל (מצב צפייה)‏",
     "Standard Filter...": "מסנן רגיל...‏",
     "Standard Text Attributes": "מאפייני טקסט סטנדרטיים",
@@ -2268,7 +2268,7 @@
     "Te~mplates": "~תבניות",
     "Te~xt": "~טקסט",
     "Te~xt <-> Table...": "טקסט <-> טבלה...",
-    "Te~xt Attributes...": "Te~xt Attributes...",
+    "Te~xt Attributes...": "מאפייני ~טקסט…",
     "Te~xt Boundaries": "גבולות טקסט",
     "Te~xt to Columns...": "הסבת טק~סט לעמודות...",
     "Te~xt...": "~טקסט...",
@@ -2427,7 +2427,7 @@
     "Translate...": "Translate...",
     "Transparency": "שקיפות",
     "Transparency tool": "כלי שקיפות",
-    "Trans~pose": "Trans~pose",
+    "Trans~pose": "ש~חלוף",
     "Trapezoid": "טרפז",
     "Tree Control": "פקד עצי",
     "Tre~nd Line...": "קו מ~גמה…",
@@ -2454,7 +2454,7 @@
     "Unfold": "נפתח",
     "Ungroup Sparklines": "Ungroup Sparklines",
     "Unlink Frames": "ביטול קישור מסגרות",
-    "Unmerge Cells": "Unmerge Cells",
+    "Unmerge Cells": "פיצול תאים",
     "Unordered List": "Unordered List",
     "Unprotect Cells": "שחרור הגנת תאים",
     "Unprotect sheet": "הסרת הגנה מגליון",
@@ -2484,9 +2484,9 @@
     "Used in This Presentation": "נעשה שימוש במצגת זו",
     "User Administration...": "ניהול משתמשים…",
     "User ~Interface": "User ~Interface",
-    "User ~Interface...": "User ~Interface...",
+    "User ~Interface...": "מ~נשק משתמש…",
     "U~pdate": "עדכון",
-    "Value ~Highlighting": "הבלטת ערכים",
+    "Value ~Highlighting": "ה~דגשת ערכים",
     "Venetian": "Venetian",
     "Venetian Blinds": "תריסים רפפות",
     "Versions...": "גרסאות...‏",
@@ -2594,7 +2594,7 @@
     "~Chart": "~תרשים",
     "~Chart...": "תרשים...‏",
     "~Charts": "~תרשימים",
-    "~Chi-square Test...": "~Chi-square Test...",
+    "~Chi-square Test...": "בדיקת ~כי בריבוע…",
     "~Choose Data Source...": "בחירת מקור נתונים...‏",
     "~Clear": "~פינוי",
     "~Clear Direct Formatting": "ניקוי עיצוב י~שיר",
@@ -2621,7 +2621,7 @@
     "~Custom Slide Show...": "הצגת שקופיות מותאמת אישית...",
     "~Customize...": "התאמה אישית...‏",
     "~Cut": "ג~זירה",
-    "~Data": "~Data",
+    "~Data": "~נתונים",
     "~Data Labels...": "~תוויות נתונים...",
     "~Data Ranges...": "טווחי נתונים...",
     "~Data Sources": "מ~קורות נתונים",
@@ -2693,7 +2693,7 @@
     "~Gallery": "~גלריה",
     "~Get Help Online": "קבלת עזרה מ~קוונת",
     "~Gluepoints": "~Gluepoints",
-    "~Go to Sheet...": "~Go to Sheet...",
+    "~Go to Sheet...": "מ~עבר לגיליון…",
     "~Goal Seek...": "חתירה למטרה...‏",
     "~Grayscale": "גווני אפור",
     "~Grid": "רשת",
@@ -2754,7 +2754,7 @@
     "~Mark Invalid Data": "סימון נתונים לא חוקיים",
     "~Master": "מאסטר",
     "~Master Elements...": "רכיבי מאסטר...",
-    "~Master Slide": "~Master Slide",
+    "~Master Slide": "שקופית הו~רה",
     "~Media": "~מדיה",
     "~Merge": "מיזוג",
     "~Modify": "שינוי",
@@ -2768,7 +2768,7 @@
     "~Named Ranges and Expressions": "טווחים וביטויים שמ~סומנים בשם…",
     "~Nested Table": "~Nested Table",
     "~New": "חדש",
-    "~New Slide": "שקופית חדשה",
+    "~New Slide": "~שקופית חדשה",
     "~New Style from Selection": "~New Style from Selection",
     "~New Window": "חלון חדש",
     "~Next Marker": "הציון הבא",
@@ -2864,9 +2864,9 @@
     "~Show...": "ה~צגה…",
     "~Sidebar": "סרגל ~צד",
     "~Sign Signature Line...": "~Sign Signature Line...",
-    "~Slide Number": "~Slide Number",
+    "~Slide Number": "מס׳ ~שקופית",
     "~Slide Show": "הצגת שקופיות",
-    "~Snap Guide...": "~קווי הצמדה",
+    "~Snap Guide...": "~קו הצמדה…",
     "~Snap Guides": "~קווי הצמדה",
     "~Snap Lines": "~קווי הצמדה",
     "~Snap to Snap Guides": "הצמ~דה לקווי ההצמדה",
