--- a/browser/l10n/uno/hsb.json
+++ b/browser/l10n/uno/hsb.json
@@ -302,10 +302,10 @@
     "Circular Arrow": "Połkružny šipk",
     "Clear": "Zhašeć",
     "Clear Contents": "Wobsah zhašeć",
-    "Clear Direct Formatting": "Direktne formatowanje zhašeć",
+    "Clear Direct Formatting": "Direktne formatěrowanje zhašeć",
     "Clear Print Ranges": "Ćišćerske wobłuki zhašeć",
     "Clear Query": "Wotprašowanje zhašeć",
-    "Clear ~Direct Formatting": "~Direktne formatowanje wotstronić",
+    "Clear ~Direct Formatting": "~Direktne formatěrowanje wotstronić",
     "Cle~ar Cells...": "Cele wup~rózdnić...",
     "Clockwise": "K směrej časnika",
     "Clockwise 1 Spoke": "K směrej časnika, 1 stpica",
@@ -314,9 +314,9 @@
     "Clockwise 4 Spokes": "K směrej časnika, 4 stpicy",
     "Clockwise 8 Spokes": "K směrej časnika, 8 stpicow",
     "Clone": "Klonować",
-    "Clone Formatting": "Formatowanje klonować",
-    "Clone Formatting (double click and Ctrl or Cmd to alter behavior)": "Formatowanje klonować (klikńće dwójce a Strg abo Cmd, zo byšće zadźeržanje změnił)",
-    "Clone Formatting (double click for multi-selection)": "Formatowanje klonować (dwójne kliknjenje za wjacory wuběr)",
+    "Clone Formatting": "Formatěrowanje klonować",
+    "Clone Formatting (double click and Ctrl or Cmd to alter behavior)": "Formatěrowanje klonować (klikńće dwójce a Strg abo Cmd, zo byšće zadźeržanje změnił)",
+    "Clone Formatting (double click for multi-selection)": "Formatěrowanje klonować (dwójne kliknjenje za wjacory wuběr)",
     "Close": "Začinić",
     "Close Bézier": "Bézierowu křiwku začinić",
     "Close Find Bar": "Pytansku lajstu začinić",
@@ -362,12 +362,12 @@
     "Compress": "Komprimować",
     "Compress Image": "Wobraz komprimować",
     "Condition...": "Wuměnjenje...",
-    "Conditional Formatting...": "Wuměnjene formatowanje...",
-    "Conditional Formatting: Color Scale": "Wuměnjene formatowanje: Barbna skala",
-    "Conditional Formatting: Condition": "Wuměnjene formatowanje: Wuměnjenje",
-    "Conditional Formatting: Data Bar": "Wuměnjene formatowanje: Datowa lajsta",
-    "Conditional Formatting: Date": "Wuměnjene formatowanje: Datum",
-    "Conditional Formatting: Icon Set": "Wuměnjene formatowanje: Symbolowa sadźba",
+    "Conditional Formatting...": "Wuměnjene formatěrowanje...",
+    "Conditional Formatting: Color Scale": "Wuměnjene formatěrowanje: Barbna skala",
+    "Conditional Formatting: Condition": "Wuměnjene formatěrowanje: Wuměnjenje",
+    "Conditional Formatting: Data Bar": "Wuměnjene formatěrowanje: Datowa lajsta",
+    "Conditional Formatting: Date": "Wuměnjene formatěrowanje: Datum",
+    "Conditional Formatting: Icon Set": "Wuměnjene formatěrowanje: Symbolowa sadźba",
     "Cone": "Kehel",
     "Connection Type...": "Zwiskowy typ...",
     "Connector": "Zwjazowak",
@@ -462,7 +462,7 @@
     "C~enter": "~Srjedźizna",
     "C~haracter": "Zna~mješko",
     "C~haracter...": "Zna~mješko...",
-    "C~onditional": "W~uměnjene formatowanje",
+    "C~onditional": "W~uměnjene formatěrowanje",
     "C~onnect": "~Zwjazać",
     "Darken": "Zaćěmnić",
     "Data": "Daty",
@@ -876,46 +876,46 @@
     "Form...": "Formular...",
     "FormControls": "Formularowe wodźenske elementy",
     "Format": "Format",
-    "Format All Comments": "Wšě komentary formatować",
-    "Format Axis...": "Wósku formatować...",
-    "Format Cell Borders": "Celowe ramiki formatować",
-    "Format Chart Area...": "Diagramowu płoninu formatować...",
-    "Format Data Labels...": "Datowe popisy formatować...",
-    "Format Data Point...": "Datowy dypk formatować...",
-    "Format Data Series...": "Datowy rjad formatować...",
-    "Format Floor...": "Diagramowe dno formatować...",
-    "Format Legend": "Legendu formatować",
-    "Format Legend...": "Legendu formatować...",
-    "Format Major Grid...": "Hłownu lěsycu formatować...",
-    "Format Mean Value Line...": "Liniju přerězneje hódnoty formatować...",
-    "Format Minor Grid...": "Pomocnu lěsycu formatować...",
-    "Format Page": "Stronu formatować",
+    "Format All Comments": "Wšě komentary formatěrować",
+    "Format Axis...": "Wósku formatěrować...",
+    "Format Cell Borders": "Celowe ramiki formatěrować",
+    "Format Chart Area...": "Diagramowu płoninu formatěrować...",
+    "Format Data Labels...": "Datowe popisy formatěrować...",
+    "Format Data Point...": "Datowy dypk formatěrować...",
+    "Format Data Series...": "Datowy rjad formatěrować...",
+    "Format Floor...": "Diagramowe dno formatěrować...",
+    "Format Legend": "Legendu formatěrować",
+    "Format Legend...": "Legendu formatěrować...",
+    "Format Major Grid...": "Hłownu lěsycu formatěrować...",
+    "Format Mean Value Line...": "Liniju přerězneje hódnoty formatěrować...",
+    "Format Minor Grid...": "Pomocnu lěsycu formatěrować...",
+    "Format Page": "Stronu formatěrować",
     "Format Pa~ge...": "Format s~trony...",
-    "Format Selection...": "Wuběr formatować...",
-    "Format Single Data Label...": "Jedyn datowy popis formatować...",
-    "Format Slide": "Foliju formatować",
-    "Format Stock Gain...": "Dobytk wobstatka formatować...",
-    "Format Stock Loss...": "Stratu wobstatka formatować...",
-    "Format Title...": "Titul formatować...",
-    "Format Trend Line Equation...": "Runicu trendoweje linije formatować...",
-    "Format Trend Line...": "Trendowu liniju formatować...",
-    "Format Wall...": "Diagramowu sćěnu formatować...",
-    "Format X Error Bars...": "Zmylkowe hrjady X formatować...",
-    "Format Y Error Bars...": "Zmylkowe hrjady Y formatować...",
-    "Format as Currency": "Jako měnu formatować",
-    "Format as Date": "Jako datum formatować",
-    "Format as General": "Jako standard formatować",
-    "Format as Number": "Jako ličbu formatować",
-    "Format as Percent": "Jako procent formatować",
-    "Format as Scientific": "Jako wědomostny formatować",
-    "Format as Time": "Jako čas formatować",
-    "Format ~Cells...": "~Cele formatować...",
+    "Format Selection...": "Wuběr formatěrować...",
+    "Format Single Data Label...": "Jedyn datowy popis formatěrować...",
+    "Format Slide": "Foliju formatěrować",
+    "Format Stock Gain...": "Dobytk wobstatka formatěrować...",
+    "Format Stock Loss...": "Stratu wobstatka formatěrować...",
+    "Format Title...": "Titul formatěrować...",
+    "Format Trend Line Equation...": "Runicu trendoweje linije formatěrować...",
+    "Format Trend Line...": "Trendowu liniju formatěrować...",
+    "Format Wall...": "Diagramowu sćěnu formatěrować...",
+    "Format X Error Bars...": "Zmylkowe hrjady X formatěrować...",
+    "Format Y Error Bars...": "Zmylkowe hrjady Y formatěrować...",
+    "Format as Currency": "Jako měnu formatěrować",
+    "Format as Date": "Jako datum formatěrować",
+    "Format as General": "Jako standard formatěrować",
+    "Format as Number": "Jako ličbu formatěrować",
+    "Format as Percent": "Jako procent formatěrować",
+    "Format as Scientific": "Jako wědomostny formatěrować",
+    "Format as Time": "Jako čas formatěrować",
+    "Format ~Cells...": "~Cele formatěrować...",
     "Format ~Page...": "Format ~strony...",
-    "Formatted Field": "Formatowane polo",
-    "Formatting": "Formatowanje",
-    "Formatting (Styles)": "Formatowanje (Předłohi)",
-    "Formatting Mark": "Formatowanske znamješko",
-    "Formatting Marks": "Formatowanske znamješka",
+    "Formatted Field": "Sformatěrowane polo",
+    "Formatting": "Formatěrowanje",
+    "Formatting (Styles)": "Formatěrowanje (Předłohi)",
+    "Formatting Mark": "Formatěrowanske znamješko",
+    "Formatting Marks": "Formatěrowanske znamješka",
     "Forms": "Formulary",
     "Formula Bar": "Formlowa lajsta",
     "Formula Cursor": "Formlowy kursor",
@@ -1352,7 +1352,7 @@
     "Main ~Toolbar": "~Hłowna symbolowa lajsta",
     "Manage Breakpoints": "Zadźeržne dypki rjadować",
     "Manage Changes": "Změny rjadować",
-    "Manage Conditional Formatting...": "Wuměnjene formatowanje rjadować...",
+    "Manage Conditional Formatting...": "Wuměnjene formatěrowanje rjadować...",
     "Manage Document Classification": "Dokumentowu klasifikaciju rjadować",
     "Manage Language": "Rěč rjadować",
     "Manage Paragraph Classification": "Wotstawkowu klasifikaciju rjadować",
@@ -1568,7 +1568,7 @@
     "Page Columns": "Špalty strony",
     "Page Down": "Wo stronu dele",
     "Page Format": "Format strony",
-    "Page Formatting": "Formatowanje strony",
+    "Page Formatting": "Formatěrowanje strony",
     "Page Header\/Footer": "Hłowa\/noha strony",
     "Page Left": "Wo stronu dolěwa",
     "Page Margins": "Kromy strony",
@@ -1601,7 +1601,7 @@
     "Paste Only Text": "Jenož tekst zasadźić",
     "Paste Special": "Wobsah zasadźić",
     "Paste Transposed": "Transponowany",
-    "Paste Unformatted Text": "Njeformatowany tekst zasadźić",
+    "Paste Unformatted Text": "Njeformatěrowany tekst zasadźić",
     "Paste as Columns Before": "Jako špalty před tym zasadźić",
     "Paste as Nested Table": "Jako zakašćikowanu tabelu zasadźić",
     "Paste as Rows Above": "Jako linki nad tym zasadźić",
@@ -1634,7 +1634,7 @@
     "Position and Si~ze...": "Pozicija a wu~lkosć...",
     "Position in Document": "Pozicija w dokumenće",
     "Posterize": "Poster",
-    "Preformatted Text Paragraph Style": "Wotstawkowa předłoha Předformatowany tekst",
+    "Preformatted Text Paragraph Style": "Wotstawkowa předłoha Předformatěrowany tekst",
     "Presentation": "Prezentacija",
     "Presentation Image Options": "Nastajenja prezentaciskich wobrazow",
     "Presentation Options": "Prezentaciske nastajenja",
@@ -1650,7 +1650,7 @@
     "Previous Record": "Předchadna datowa sadźba",
     "Previous Track Change": "Předchadna změna",
     "Previous ~Marker": "Předchadny za~stupowacy symbol",
-    "Pre~formatted Text": "~Předformatowany tekst",
+    "Pre~formatted Text": "~Předformatěrowany tekst",
     "Pre~view Mode": "Pře~hladny modus",
     "Print Area": "Ćišćerski wobłuk",
     "Print Directly": "Direktnje ćišćeć",
@@ -1743,7 +1743,7 @@
     "Relationships...": "Poćahi...",
     "Relief": "Relief",
     "Remove Dependent": "Naslědnik wotstronić",
-    "Remove Direct Character Formats": "Direktne znamješkowe formatowanja wotstronić",
+    "Remove Direct Character Formats": "Direktne znamješkowe formatěrowanja wotstronić",
     "Remove Noise": "Šum wotstronić",
     "Remove Text Box": "Tekstowe polo wotstronić",
     "Remove applied character style": "Nałoženu znamješkowu předłohu wotstronić",
@@ -1767,7 +1767,7 @@
     "Replace with Currency Field": "Z měnowym polom wuměnić",
     "Replace with Date Field": "Z datowym polom wuměnić",
     "Replace with File Selection": "Z datajowym wuběrom wuměnić",
-    "Replace with Formatted Field": "Z formatowanym polom wuměnić",
+    "Replace with Formatted Field": "Z sformatěrowanym polom wuměnić",
     "Replace with Group Box": "Ze skupinskim polom wuměnić",
     "Replace with Image Button": "Z wobrazowym tłóčatkom wuměnić",
     "Replace with Image Control": "Z wobrazowym wodźenskim elementom wuměnić",
@@ -1885,7 +1885,7 @@
     "Scrollbar": "Suwanska lajsta",
     "Sc~enarios...": "S~cenarije...",
     "Search Commands": "Přikazy pytać",
-    "Search Formatted Display String": "Formatowane znamješkowe rjećazki pytać",
+    "Search Formatted Display String": "Sformatěrowane znamješkowe rjećazki pytać",
     "Search Key": "Pytanski wuraz",
     "Section": "Wotrězk",
     "Section alignment": "Wotrězkowe wusměrjenje",
@@ -1923,7 +1923,7 @@
     "Select Visible Columns Only": "Jenož widźomne špalty wubrać",
     "Select Visible Rows Only": "Jenož widźomne linki wubrać",
     "Select Word": "Słowo wubrać",
-    "Select all Formatted Fields": "Wšě formatowane pola wubrać",
+    "Select all Formatted Fields": "Wšě sformatěrowane pola wubrać",
     "Select all Labels": "Wšě popisy wubrać",
     "Select anchor for object": "Wubjerće kótwičku za objekt",
     "Select at least three objects to distribute": "Wubjerće znajmjeńša tři objekty za rozdźělenje",
@@ -2005,7 +2005,7 @@
     "Show Comme~nts": "Ko~mentary pokazać",
     "Show Deletions In Margin": "Zhašenja na kromje pokazać",
     "Show Draw Functions": "Rysowanske funkcije pokazać",
-    "Show Formatting": "Formatowanje pokazać",
+    "Show Formatting": "Formatěrowanje pokazać",
     "Show Formula": "Formlu pokazać",
     "Show Gluepoint Functions": "Funkcije lěpjatych dypkow pokazać",
     "Show Hidden Row\/Column Indicator": "Indikator schowaneje linki\/špalty pokazać",
@@ -2184,13 +2184,13 @@
     "Styl~es": "Pře~dłohi",
     "St~yle": "Předł~oha",
     "St~yles": "Př~edłohi",
-    "Subscript": "Zniženy",
+    "Subscript": "Nišo stajeny",
     "Subtitle Paragraph Style": "Wotstawkowa předłoha Podtitul",
     "Subtle": "Subtilny",
     "Sub~totals...": "~Mjezywuslědki...",
     "Sum": "Suma",
     "Sun": "Słónco",
-    "Superscript": "Powyšeny",
+    "Superscript": "Wyše stajeny",
     "Surface": "Powjerch",
     "Su~btitle": "~Podtitul",
     "Su~mmary Slide": "Pře~hladna folija",
@@ -2249,13 +2249,13 @@
     "Text Body Paragraph Style": "Wotstawkowa předłoha tekstowe ćěleso",
     "Text Box": "Tekstowe polo",
     "Text Box (drawing)": "Tekstowe polo (rysowanka)",
-    "Text Box Formatting": "Formatowanje tekstoweho pola",
+    "Text Box Formatting": "Formatěrowanje tekstoweho pola",
     "Text Box and Shap~e": "Te~kstowe polo a twar",
     "Text B~ox and Shape": "Te~kstowe polo a twar",
     "Text Document": "Tekstowy dokument",
     "Text Document Options": "Nastajenja tekstoweho dokumenta",
     "Text Form Field": "Tekstowe formularowe polo",
-    "Text Formatting": "Tekstowe formatowanje",
+    "Text Formatting": "Tekstowe formatěrowanje",
     "Text Frame": "Tekstowy wobłuk",
     "Text Object": "Tekstowy objekt",
     "Text Placeholders": "Tekstowe zastupniki",
@@ -2397,7 +2397,7 @@
     "Toggle Edit Mode": "Wobdźěłanski modus přepinać",
     "Toggle Extrusion": "Ekstruziju přepinać",
     "Toggle Form Control Wizards": "Asistenty wodźenskich elementow za formulary přepinać",
-    "Toggle Formatting Marks": "Formatowanske znamješka přepinać",
+    "Toggle Formatting Marks": "Formatěrowanske znamješka přepinać",
     "Toggle Ordered List": "Čisłowanu lisćinu přepinać",
     "Toggle Outline Folding": "Fałdowanje rozrjada přepinać",
     "Toggle Print Preview": "Ćišćerski přehlad přepinać",
@@ -2472,7 +2472,7 @@
     "Update Index": "Zapis aktualizować",
     "Update Indexes and ~Tables": "Zapisy a ~tabele aktualizować",
     "Update Input Fields": "Zapodawanske pola aktualizować",
-    "Update Page Formatting": "Formatowanje strony aktualizować",
+    "Update Page Formatting": "Formatěrowanje strony aktualizować",
     "Update ~Charts": "~Diagramy aktualizować",
     "Update ~Fields": "~Pola aktualizować",
     "Update ~Index": "~Zapis aktualizować",
@@ -2597,7 +2597,7 @@
     "~Chi-square Test...": "Kwadratny test ~Chi...",
     "~Choose Data Source...": "Datowe žórło w~ubrać...",
     "~Clear": "~Zhašeć",
-    "~Clear Direct Formatting": "~Direktne formatowanje zhašeć",
+    "~Clear Direct Formatting": "~Direktne formatětowanje zhašeć",
     "~Close": "~Začinić",
     "~Color": "~Barba",
     "~Color Bar": "~Barbowa lajsta",
@@ -2609,7 +2609,7 @@
     "~Column Width...": "Šě~rokosć špalty...",
     "~Columns...": "Špa~lty...",
     "~Comment...": "~Komentar...",
-    "~Conditional Formatting...": "Wu~měnjene formatowanje...",
+    "~Conditional Formatting...": "Wu~měnjene formatěrowanje...",
     "~Connector...": "~Zwjazowak...",
     "~Consolidate...": "~Konsolidować...",
     "~Contour": "~Kontura",
@@ -2679,8 +2679,8 @@
     "~Footnote": "~Nóžka",
     "~Footnote or Endnote...": "~Nóžka abo kónčna nóžka...",
     "~Footnotes and Endnotes...": "~Nóžki a kónčne nóžki...",
-    "~Format All Comments...": "Wšě komentary ~formatować...",
-    "~Format Cells...": "~Cele formatować...",
+    "~Format All Comments...": "Wšě komentary ~formatěrować...",
+    "~Format Cells...": "~Cele formatěrować...",
     "~Forms": "~Formulary",
     "~Formula": "~Formla",
     "~Formula Bar": "~Formlowa lajsta",
@@ -2911,7 +2911,7 @@
     "~UPPERCASE": "W~ULKE PISMIKI",
     "~Unary\/Binary Operators": "~Unarne\/Binarne operatory",
     "~Undo": "~Cofnyć",
-    "~Unformatted Text": "~Njeformatowany tekst",
+    "~Unformatted Text": "~Njeformatěrowany tekst",
     "~Ungroup": "~Skupinu zběhnyć",
     "~Ungroup...": "Zeskupjenje z~běhnyć...",
     "~Unordered List": "~Njesortěrowana lisćina",
