--- a/browser/l10n/uno/it.json
+++ b/browser/l10n/uno/it.json
@@ -1142,7 +1142,7 @@
     "Insert Columns Before": "Inserisci colonne prima",
     "Insert Columns ~After": "Inserisci colonne d~opo",
     "Insert Columns ~Before": "Inserisci colonne ~prima",
-    "Insert Combo Box Content Control": "Inserisci controllo contenuto Casella combinata",
+    "Insert Combo Box Content Control": "Inserisci controllo contenuto casella combinata",
     "Insert Command": "Inserisci comando",
     "Insert Comment": "Inserisci commento",
     "Insert Controls": "Inserisci elementi di controllo",
