--- a/browser/l10n/uno/lt.json
+++ b/browser/l10n/uno/lt.json
@@ -59,7 +59,7 @@
     "Additional Extensions": "Additional Extensions",
     "Adjust Scale": "Parinkti mastelį",
     "Advanced Settings...": "Kitos nuostatos...",
-    "After": "After",
+    "After": "Iš dešinės",
     "Aging": "Blukinimas",
     "Alias": "Alternatyvus vardas",
     "Align": "Lygiuotė",
@@ -81,11 +81,11 @@
     "Align to Vertical Center of Character": "Lygiuoti rašmenų centrus vertikaliai",
     "Align to Vertical Center of Line": "Lygiuoti eilučių centrus vertikaliai",
     "Alignment": "Lygiuotė",
-    "Alig~n Objects": "Alig~n Objects",
+    "Alig~n Objects": "Objektų lygiuotė",
     "All ~Changes Inline": "All ~Changes Inline",
     "Allow Interaction": "Sąveika",
     "Allow Quick Editing": "Spartusis taisymas",
-    "Anchor Menu": "Anchor Menu",
+    "Anchor Menu": "Prieraišas",
     "Anchor To Frame": "Pririšti prie kadro",
     "Anchor To Page": "Pririšti prie puslapio",
     "Anchor To Paragraph": "Pririšti prie pastraipos",
@@ -189,7 +189,7 @@
     "Basic Macro Organizer...": "„Basic“ makrokomandų tvarkytuvė…",
     "Basic Shapes": "Pagrindinės figūros",
     "Bean": "Pupa",
-    "Before": "Before",
+    "Before": "Iš kairės",
     "Be~hind Object": "Už objekto",
     "Black & White View": "Nespalvotas rodymas",
     "Blank Slide": "Tuščia skaidrė",
@@ -225,7 +225,7 @@
     "Breakpoint On\/Off": "Stabdos taškas",
     "Brightness": "Šviesis",
     "Bring ~Forward": "Perkelti priekio link",
-    "Bullet • List Style": "Bullet • List Style",
+    "Bullet • List Style": "Ženklinto sąrašo stilius •",
     "Bullets and Numbering": "Ženklinimas ir numeravimas",
     "Button": "Mygtukas",
     "Buzz Saw": "Pjūklas",
@@ -498,7 +498,7 @@
     "Default Cell Style": "Numatytasis langelio stilius",
     "Default Colors for Data Series": "Vaizduojamo duomenų ploto numatytoji spalva",
     "Default Paragraph Style": "Numatytasis pastraipos stilius",
-    "Default Table Style": "Default Table Style",
+    "Default Table Style": "Numatytasis lentelės stilius",
     "Default ~Character": "Default ~Character",
     "Default ~Paragraph": "~Pastraipos numatytasis",
     "Define Print Area": "Apibrėžti spausdinimo sritį",
@@ -1316,7 +1316,7 @@
     "Line Numbers": "Eilučių numeriai",
     "Line Spacing": "Eilučių intervalas",
     "Line Spacing: 1": "Eilučių intervalas: 1",
-    "Line Spacing: 1.15": "Line Spacing: 1.15",
+    "Line Spacing: 1.15": "Eilučių intervalas: 1,15",
     "Line Spacing: 1.5": "Eilučių intervalas: 1,5",
     "Line Spacing: 2": "Eilučių intervalas: 2",
     "Line Starts with Arrow": "Rodyklė pradžioje",
@@ -1471,9 +1471,9 @@
     "Next Track Change": "Kita pataisa",
     "Ne~xt Error": "Kita klaida",
     "No List": "No List",
-    "No ~Character Style": "No ~Character Style",
+    "No ~Character Style": "Be rašmens stiliaus",
     "No-~width Optional Break": "Nulinio pločio lūžio ženklas",
-    "None": "None",
+    "None": "Teksto nelaužyti",
     "Notched Right Arrow": "Rantyta rodyklė dešinėn",
     "Note": "Pastaba",
     "Note Cell Style": "Langelio stilius „Pastaba“",
@@ -1494,12 +1494,12 @@
     "Number Recognition": "Atpažinti skaičius",
     "Number of lines in combination chart": "Linijų skaičius jungtinėje diagramoje",
     "Numbering": "Numeravimas",
-    "Numbering 123 List Style": "Numbering 123 List Style",
-    "Numbering ABC List Style": "Numbering ABC List Style",
-    "Numbering IVX List Style": "Numbering IVX List Style",
+    "Numbering 123 List Style": "Numeruoto sąrašo stilius 123",
+    "Numbering ABC List Style": "Numeruoto sąrašo stilius ABC",
+    "Numbering IVX List Style": "Numeruoto sąrašo stilius IVX",
     "Numbering On\/Off": "Numeravimas",
-    "Numbering abc List Style": "Numbering abc List Style",
-    "Numbering ivx List Style": "Numbering ivx List Style",
+    "Numbering abc List Style": "Numeruoto sąrašo stilius abc",
+    "Numbering ivx List Style": "Numeruoto sąrašo stilius ivx",
     "Numeric Field": "Skaitinis laukas",
     "Numerical Field": "Skaitinis laukas",
     "OLE Object": "OLE objektas",
@@ -1553,7 +1553,7 @@
     "Out from screen center": "Išorėn iš ekrano centro",
     "Out slightly": "Nežymiai išorėn",
     "Outline": "Kontūras",
-    "Outline Font Effect": "Outline Font Effect",
+    "Outline Font Effect": "Kontūras",
     "Outline Format": "Outline Format",
     "Outline to ~Clipboard": "Antraštes į iškarpinę",
     "Outline to ~Presentation": "Antraštes į pateiktį",
@@ -1925,7 +1925,7 @@
     "Select Word": "Pažymėti žodį",
     "Select all Formatted Fields": "Pažymėti visus formatuotus laukus",
     "Select all Labels": "Pažymėti visas žymes",
-    "Select anchor for object": "Select anchor for object",
+    "Select anchor for object": "Parinkite objekto prieraišą",
     "Select at least three objects to distribute": "Select at least three objects to distribute",
     "Select start and end arrowheads for lines.": "Select start and end arrowheads for lines.",
     "Select to Begin of Line": "Pažymėti iki eilutės pradžios",
@@ -2528,7 +2528,7 @@
     "Wheel": "Ratas",
     "Whip": "Plakimas",
     "Wipe": "Braukimas",
-    "Word ~Joiner": "Word ~Joiner",
+    "Word ~Joiner": "Žodžių jungtukas",
     "Wor~kspace": "Darbinė veiksena",
     "Wrap": "Teksto laužymas",
     "Wrap Contour On": "Teksto laužymas pagal kontūrą įjungtas",
@@ -2586,7 +2586,7 @@
     "~Break": "Skaidyti linijas",
     "~Bring to Front": "Perkelti į priekį",
     "~Bullets and Numbering...": "Ženklinimas ir numeravimas...",
-    "~Callout Shapes": "~Callout Shapes",
+    "~Callout Shapes": "Figūrinės išnašos",
     "~Capitalize Every Word": "Kiekvienas Žodis Iš Didžiosios Raidės",
     "~Cell": "Langelis",
     "~Centered": "Centrinė",
@@ -2649,7 +2649,7 @@
     "~Distribution": "~Distribution",
     "~Drawing View": "Skaidrės eskizas",
     "~Edit": "~Taisa",
-    "~Edit Barcode...": "~Edit Barcode...",
+    "~Edit Barcode...": "Taisyti brūkšninį kodą…",
     "~Edit Contour...": "Taisyti kontūrą…",
     "~Edit Style...": "Taisyti stilių…",
     "~Edit Template...": "Taisyti šabloną…",
@@ -2744,7 +2744,7 @@
     "~Line": "Linijos",
     "~Line Numbering...": "Eilučių numeravimas...",
     "~Links": "Atnaujinti ~saitus",
-    "~List": "~List",
+    "~List": "Sąrašas",
     "~Load Styles from Template": "~Load Styles from Template",
     "~Macros": "Makrokomandos",
     "~Mail Merge...": "Laiškų komponavimas...",
@@ -2780,7 +2780,7 @@
     "~Object Bar": "Formatų juosta",
     "~Open Local Copy": "~Open Local Copy",
     "~Open...": "Atverti…",
-    "~Optimal": "~Optimal",
+    "~Optimal": "Optimalusis apgaubimas tekstu",
     "~Optimal Column Width...": "Optimalus stulpelio plotis",
     "~Optimal Height...": "Optimalus aukštis...",
     "~Optimal Row Height...": "Optimalus eilutės aukštis...",
@@ -2799,7 +2799,7 @@
     "~Page Pane": "Lapų polangis",
     "~Page Style...": "Puslapio stilius…",
     "~Page...": "Puslapis...",
-    "~Parallel": "~Parallel",
+    "~Parallel": "Visiškasis apgaubimas tekstu",
     "~Paste": "Įdėti",
     "~Pivot Table": "Suvestinė lentelė",
     "~Presentation": "Pateikties meniu",
@@ -2896,7 +2896,7 @@
     "~Text to Table...": "Paversti tekstą lentele...",
     "~Text...": "Tekstas…",
     "~Thesaurus...": "Tezauras...",
-    "~Through": "~Through",
+    "~Through": "Objektas virš teksto",
     "~Time": "Laikas",
     "~Time (fixed)": "Laikas (fiksuotas)",
     "~Tip of the day": "Dienos patarimas",
