--- a/browser/l10n/uno/nb.json
+++ b/browser/l10n/uno/nb.json
@@ -2518,7 +2518,7 @@
     "View Images and Charts": "Vis bilede og diagram",
     "View Panel": "Vis panel",
     "Views Tab ~Bar": "Visnings flikstolpe",
-    "Vortex": "Vortex",
+    "Vortex": "Vorteks",
     "Warning": "Advarsel",
     "Warning Cell Style": "Cellestil for Advarsel",
     "Watermark...": "Vannmerke...",
