--- a/browser/l10n/uno/nl.json
+++ b/browser/l10n/uno/nl.json
@@ -82,7 +82,7 @@
     "Align to Vertical Center of Line": "Verticaal gecentreerd uitlijnen aan regel",
     "Alignment": "Uitlijning",
     "Alig~n Objects": "Objecte~n uitlijnen",
-    "All ~Changes Inline": "Alle ~wijzigingen Inline",
+    "All ~Changes Inline": "Alle ~wijzigingen in de tekstregel",
     "Allow Interaction": "Interacties toestaan",
     "Allow Quick Editing": "Snelbewerking toestaan",
     "Anchor Menu": "Verankering voor object",
@@ -222,7 +222,7 @@
     "Box List Red": "Rode lijst",
     "Box List Yellow": "Gele lijst",
     "Breakpoint Enabled\/Disabled": "Onderbrekingspunt in-\/uitgeschakeld",
-    "Breakpoint On\/Off": "Onderbrekingspunten aan\/uit",
+    "Breakpoint On\/Off": "Onderbrekingspunten",
     "Brightness": "Helderheid",
     "Bring ~Forward": "Eén naar v~oren",
     "Bullet • List Style": "Lijstopmaakprofiel Opsommingsteken •",
@@ -380,7 +380,7 @@
     "Connector\/Freeform Line": "Verbinding\/Vrije vormlijn",
     "Connectors": "Verbindingen",
     "Consolidate Text": "Tekst consolideren",
-    "Content Control Properties": "Eigenschappen voor inhoudsbesturingselementen",
+    "Content Control Properties": "Eigenschappen voor besturingselementen",
     "Content Controls": "Besturingselement Inhoud",
     "Contents": "Inhoud",
     "Contextual Single": "Contextueel enkelvoudig",
@@ -565,8 +565,8 @@
     "Description...": "Beschrijving...",
     "Deselect All Sheets": "Geen bladen selecteren",
     "Design": "Ontwerp",
-    "Design Mode": "Ontwerpmodus aan\/uit",
-    "Design Mode On\/Off": "Ontwerpmodus aan\/uit",
+    "Design Mode": "Ontwerpmodus",
+    "Design Mode On\/Off": "Ontwerpmodus",
     "Detective": "Detective",
     "Development Tools": "Ontwikkelingshulpmiddelen",
     "De~lete...": "~Verwijderen...",
@@ -706,7 +706,7 @@
     "Exit Fill Mode": "Opvulmodus afsluiten",
     "Expand": "Uitbreiden",
     "Explorer": "Verkenner",
-    "Explorer On\/Off": "Verkenner aan\/uit",
+    "Explorer On\/Off": "Verkenner",
     "Explosion": "Explosie",
     "Export BASIC...": "BASIC exporteren...",
     "Export Dialog...": "Dialoogvenster Exporteren...",
@@ -729,7 +729,7 @@
     "E~mphasis": "Geaccent~ueerd",
     "E~xecute Interaction...": "In~teractie uitvoeren...",
     "E~xit": "~Afsluiten",
-    "E~xit Group": "Groepering ver~laten",
+    "E~xit Group": "Groep ver~laten",
     "E~xpand Slide": "Dia-inhoud ~verdelen",
     "E~xternal Links...": "E~xterne koppelingen...",
     "Fade": "Vervagen",
@@ -834,8 +834,8 @@
     "Fly In": "Binnenvliegen",
     "Fly Out": "Buitenvliegen",
     "Fly in Slow": "Langzaam binnenvliegen",
-    "Fold": "Vouwen",
-    "Fold or unfold outline content in document": "Overzichtsinhoud in het document invouwen of uitklappen",
+    "Fold": "Invouwen",
+    "Fold or unfold outline content in document": "Overzichtsinhoud in het document invouwen of uitvouwen",
     "Folded Corner": "Ezelsoor",
     "Folder...": "Map...",
     "Font Color": "Tekstkleur",
@@ -860,7 +860,7 @@
     "Form Check Box": "Selectievakje voor formulier",
     "Form Combo Box": "Keuzelijst met invoervak voor formulier",
     "Form Control": "Formulierbesturingselementen",
-    "Form Control Wizards": "Formulierbesturingselementen aan\/uit",
+    "Form Control Wizards": "Formulierbesturingselementen",
     "Form Controls": "Formulierbesturingselementen",
     "Form Design": "Formulierontwerp",
     "Form Filter": "Formulierfilter",
@@ -1132,7 +1132,7 @@
     "Insert Cells Down": "Cellen invoegen, naar beneden",
     "Insert Cells Right": "Cellen invoegen, naar rechts",
     "Insert Chart": "Diagram",
-    "Insert Check Box Content Control": "Inhoudsbesturingselement selectievakje invoegen",
+    "Insert Check Box Content Control": "Keuzevakje",
     "Insert Column": "Kolom invoegen",
     "Insert Column After": "Kolom rechts invoegen",
     "Insert Column Before": "Kolom links invoegen",
@@ -1154,8 +1154,8 @@
     "Insert Current Time": "Actuele tijd invoegen",
     "Insert Data Labels": "Gegevenslabels invoegen",
     "Insert Data Table": "Gegevenstabel invoegen",
-    "Insert Date Content Control": "Beturingselement Datum invoegen",
-    "Insert Drop-Down List Content Control": "Inhoudsbeheer in keuzelijst invoegen",
+    "Insert Date Content Control": "Datum",
+    "Insert Drop-Down List Content Control": "Keuzelijst",
     "Insert Ellipse": "Ellips",
     "Insert Endnote": "Eindnoot invoegen",
     "Insert Field": "Veld invoegen",
@@ -1176,7 +1176,7 @@
     "Insert Legend": "Legenda invoegen",
     "Insert Line": "Lijn",
     "Insert Major Grid": "Hoofdraster invoegen",
-    "Insert Manual Row Break": "Handmatig rijeinde invoegen",
+    "Insert Manual Row Break": "Handmatig regeleinde invoegen",
     "Insert Mean ~Value Line": "Gemiddelde~waardelijn invoegen",
     "Insert Minor Grid": "Subraster invoegen",
     "Insert Mode": "Invoegmodus",
@@ -1188,11 +1188,11 @@
     "Insert Page from File...": "Dia uit bestand invoegen...",
     "Insert Page ~Break": "Pa~gina-einde invoegen",
     "Insert Paragraph": "Alinea invoegen",
-    "Insert Picture Content Control": "Besturingselement beeldinhoud invoegen",
+    "Insert Picture Content Control": "Afbeelding",
     "Insert Plain Text Content Control": "Inhoudsbesturingselement voor platte tekst invoegen",
     "Insert Points": "Punten invoegen",
     "Insert Rectangle": "Rechthoek",
-    "Insert Rich Text Content Control": "Rich Text Content-besturingselement invoegen",
+    "Insert Rich Text Content Control": "Rich-Text",
     "Insert Row": "Rij invoegen",
     "Insert Row Above": "Rij erboven invoegen",
     "Insert Row Below": "Rij eronder invoegen",
@@ -1223,13 +1223,13 @@
     "Insert Vertical Text": "Verticale tekst",
     "Insert X Error ~Bars...": "X-fout~balken invoegen...",
     "Insert Y Error ~Bars...": "Y-fout~balken invoegen...",
-    "Insert columns after": "Kolommen rechts invoegen",
-    "Insert columns before": "Kolommen links invoegen",
+    "Insert columns after": "Kolom(men) rechts invoegen",
+    "Insert columns before": "Kolom(men) links invoegen",
     "Insert non-br~eaking hyphen": "Hard kopp~elteken",
     "Insert or Edit Formula": "Formule invoegen of bewerken",
     "Insert or Edit Pivot Table": "Draaitabel invoegen of bewerken",
-    "Insert rows above": "Rijen erboven invoegen",
-    "Insert rows below": "Rijen eronder invoegen",
+    "Insert rows above": "Rij(en) erboven invoegen",
+    "Insert rows below": "Rij(en) eronder invoegen",
     "Insert single-column frame manually": "Eenkoloms frame handmatig invoegen",
     "Insert s~oft Hyphen": "Zacht k~oppelteken",
     "Insert ~Cells...": "~Cellen invoegen...",
@@ -1288,7 +1288,7 @@
     "Legacy Circles and Ovals": "Overgeërfde cirkels en ellipsen",
     "Legacy Form Fields": "Verouderde besturingselementen",
     "Legacy Rectangles": "Overgeërfde rechthoeken",
-    "Legend On\/Off": "Legenda aan\/uit",
+    "Legend On\/Off": "Legenda",
     "Legend Position": "Legendapositie",
     "License Information": "Licentie-informatie",
     "Lighten": "Lichter maken",
@@ -1345,7 +1345,7 @@
     "Loop de Loop": "Lussen",
     "L~ine...": "Li~jn...",
     "Macro": "Macro",
-    "Macro Toolbar On\/Off": "Macrobalk aan\/uit",
+    "Macro Toolbar On\/Off": "Macrobalk",
     "Magnify": "Vergroten",
     "Mail Merge": "Assistent Brief",
     "Mail Merge Wi~zard...": "Assistent Brie~f...",
@@ -1497,7 +1497,7 @@
     "Numbering 123 List Style": "Lijstopmaakprofiel Nummering 123",
     "Numbering ABC List Style": "Lijstopmaakprofiel Nummering abc",
     "Numbering IVX List Style": "Lijstopmaakprofiel Nummering IVX",
-    "Numbering On\/Off": "Nummering aan\/uit",
+    "Numbering On\/Off": "Nummering",
     "Numbering abc List Style": "Lijstopmaakprofiel Nummering abc",
     "Numbering ivx List Style": "Lijstopmaakprofiel Nummering IVX",
     "Numeric Field": "Numeriek veld",
@@ -1851,7 +1851,7 @@
     "Run Macro Field": "Macroveld uitvoeren",
     "Run Query": "Query uitvoeren",
     "Run SQL command directly": "SQL-opdracht onmiddellijk uitvoeren",
-    "R~eference": "R~eferentie",
+    "R~eference": "V~erwijzing",
     "R~efresh Range": "Bereik ~vernieuwen",
     "R~ight-To-Left": "Van ~rechts naar links",
     "R~un Macro...": "Macro ~uitvoeren...",
@@ -2195,7 +2195,7 @@
     "Su~btitle": "~Subtitel",
     "Su~mmary Slide": "~Overzichtsdia",
     "Swish": "Zweepslag",
-    "Switch Design View On\/Off": "Ontwerpweergave aan\/uit",
+    "Switch Design View On\/Off": "Ontwerpweergave",
     "Swivel": "Ronddraaien",
     "Swoosh": "Woesj",
     "Symbol": "Speciaal teken",
@@ -2390,13 +2390,13 @@
     "To ~Metafile": "Naar ~metabestand",
     "To ~Paragraph": "Aan a~linea",
     "To ~Polygon": "Naar ~veelhoek",
-    "Toggle Automatic Accessibility Checking": "Automatische toegankelijkheidscontrole aan\/uit",
+    "Toggle Automatic Accessibility Checking": "Automatische toegankelijkheidscontrole",
     "Toggle Automatic Spell Checking": "Automatische spellingscontrole",
-    "Toggle Design Mode": "Ontwerpmodus aan\/uit",
+    "Toggle Design Mode": "Ontwerpmodus",
     "Toggle Direct Cursor Mode": "Wissel naar DirectCursor modus",
     "Toggle Edit Mode": "Bewerkingsmodus",
     "Toggle Extrusion": "Omzetten naar 3D-weergave",
-    "Toggle Form Control Wizards": "Formulierbesturingselementen aan\/uit",
+    "Toggle Form Control Wizards": "Formulierbesturingselementen",
     "Toggle Formatting Marks": "Niet-afdrukbare tekens",
     "Toggle Ordered List": "Geordende lijst",
     "Toggle Outline Folding": "Overzicht uitvouwen wisselen",
@@ -2451,7 +2451,7 @@
     "Undo": "Ongedaan maken",
     "Undo Selection": "Selectie ongedaan maken",
     "Undo: Data entry": "Ongedaan maken: gegevensinvoer",
-    "Unfold": "Ontvouwen",
+    "Unfold": "Uitvouwen",
     "Ungroup Sparklines": "Sparklinegroep opheffen",
     "Unlink Frames": "Koppeling verwijderen",
     "Unmerge Cells": "Cellen splitsen",
@@ -2656,7 +2656,7 @@
     "~Edit...": "~Bewerken...",
     "~Email Document...": "~Document als e-mail...",
     "~Endnote": "~Eindnoot",
-    "~Enter Group": "Groepering be~treden",
+    "~Enter Group": "Groep be~treden",
     "~Exponential Smoothing...": "~Exponentiële afvlakking...",
     "~Export As": "~Exporteren als",
     "~Export as PDF...": "~PDF...",
@@ -2745,7 +2745,7 @@
     "~Line Numbering...": "~Regelnummering...",
     "~Links": "~Koppelingen",
     "~List": "~Lijst",
-    "~Load Styles from Template": "Opmaak~profielen uit sjablonen laden",
+    "~Load Styles from Template": "Opmaak~profielen uit sjablonen laden...",
     "~Macros": "~Macro's",
     "~Mail Merge...": "A~ssitent Brief...",
     "~Main Title...": "~Hoofdtitel...",
@@ -2769,7 +2769,7 @@
     "~Nested Table": "~Geneste tabel",
     "~New": "~Nieuw",
     "~New Slide": "~Nieuwe dia",
-    "~New Style from Selection": "~Nieuw opmaakprofiel uit selectie",
+    "~New Style from Selection": "~Nieuw opmaakprofiel uit selectie...",
     "~New Window": "~Nieuw venster",
     "~Next Marker": "~Volgende markering",
     "~Normal": "~Normaal",
