--- a/browser/l10n/uno/oc.json
+++ b/browser/l10n/uno/oc.json
@@ -217,10 +217,10 @@
     "Bounce Left": "Rebombida a esquèrra",
     "Bounce Right": "Rebombida a dreita",
     "Box": "Bóstia",
-    "Box List Blue": "Box List Blue",
-    "Box List Green": "Box List Green",
-    "Box List Red": "Box List Red",
-    "Box List Yellow": "Box List Yellow",
+    "Box List Blue": "Quadre de lista blau",
+    "Box List Green": "Quadre de lista verd",
+    "Box List Red": "Quadre de lista roge",
+    "Box List Yellow": "Quadre de lista jaune",
     "Breakpoint Enabled\/Disabled": "Punt d'arrèst activat\/desactivat",
     "Breakpoint On\/Off": "Des\/Activar lo punt d'arrèst",
     "Brightness": "Luminositat",
@@ -768,7 +768,7 @@
     "Fill ~Up": "Emplir cap a ~amont",
     "Filter": "Filtre",
     "Filter Navigation": "Filtrar la navigacion",
-    "Financial": "Financial",
+    "Financial": "Financièr",
     "Find": "Cercar",
     "Find All": "Recercar tot",
     "Find Next": "Cercar lo tèxte",
@@ -864,13 +864,13 @@
     "Form Controls": "Contraròtles de formulari",
     "Form Design": "Esbòs de formulari",
     "Form Filter": "Filtre de formulari",
-    "Form Horizontal Scroll Bar": "Barra de desfilament orizontal per formulari",
+    "Form Horizontal Scroll Bar": "Barra de defilament orizontal per formulari",
     "Form List Box": "Zòna de lista de formulari",
     "Form Navigation": "Navigacion per formularis",
     "Form Navigator...": "Navigador de formulari...",
     "Form Option Button": "Boton Opcion de formulari",
     "Form Spin Button": "Boton Comptador de formulari",
-    "Form Vertical Scroll Bar": "Barra de desfilament verticala de formulari",
+    "Form Vertical Scroll Bar": "Barra de defilament verticala de formulari",
     "Form Wizard...": "Assistent Formulari...",
     "Form-Based Filters": "Filtres basats sus un formulari",
     "Form...": "Formulari...",
@@ -1073,7 +1073,7 @@
     "Horizontal Line": "Linha orizontala",
     "Horizontal Out": "Orizontal exterior",
     "Horizontal Scroll": "Pergamin orizontal",
-    "Horizontal Scroll Bar": "Barra de desfilament orizontala",
+    "Horizontal Scroll Bar": "Barra de defilament orizontala",
     "Horizontal in": "Orizontal interior",
     "Horizontal out": "Orizontal exterior",
     "Horizontal ~Line": "~Linha orizontala",
@@ -1777,7 +1777,7 @@
     "Replace with Numerical Field": "Remplaçar per Camp numeric",
     "Replace with Pattern Field": "Remplaçar per Camp amagat",
     "Replace with Radio Button": "Remplaçar per Boton ràdio",
-    "Replace with Scrollbar": "Remplaçar per Barra de desfilament",
+    "Replace with Scrollbar": "Remplaçar per una barra de defilament",
     "Replace with Spin Button": "Remplaçar per Comptador",
     "Replace with Text Box": "Remplaçar per Airal de tèxte",
     "Replace with Time Field": "Remplaçar per Camp orari",
@@ -1882,7 +1882,7 @@
     "Scaling at the current document": "Escala del document actuala",
     "Scan": "Numerizar",
     "Scientific": "Scientific",
-    "Scrollbar": "Barra de desfilament",
+    "Scrollbar": "Barra de defilament",
     "Sc~enarios...": "E~scenaris...",
     "Search Commands": "Cercar de comandas",
     "Search Formatted Display String": "Cercar un contengut de cellula tal coma afichat",
@@ -2012,7 +2012,7 @@
     "Show Insertions In Margin": "Show Insertions In Margin",
     "Show Navigator Window": "Afichar lo Navigator",
     "Show Only First Level": "Afichar unicament lo primièr nivèl",
-    "Show Outline Content up to Level...": "Show Outline Content up to Level...",
+    "Show Outline Content up to Level...": "Afichar lo contengut de l’esquèma fins al nivèl...",
     "Show Subpoints": "Afichar los sosparagrafes",
     "Show Tip of the Day": "Mostrar l’astúcia del jorn",
     "Show Track Changes": "Afichar los cambiaments",
@@ -2020,7 +2020,7 @@
     "Show Tracked ~Changes": "Show Tracked ~Changes",
     "Show Whitespac~e": "Afichar los espac~is voids",
     "Show change authorship in tooltips": "Afichar l'autor de las modificacions dins las infobullas.",
-    "Show outline-folding buttons": "Show outline-folding buttons",
+    "Show outline-folding buttons": "Afichar los botons de plegament d’esquèma",
     "Show resolved comme~nts": "Mostrar los ~comentaris resolguts",
     "Show the Styles Sidebar": "Afichar la barra laterala dels estils",
     "Show the Tip of the Day dialog": "Show the Tip of the Day dialog",
@@ -2500,7 +2500,7 @@
     "Vertical Out": "Vertical exterior",
     "Vertical Ruler": "Règla verticala",
     "Vertical Scroll": "Pergamin vertical",
-    "Vertical Scroll Bar": "Barra de desfilament verticala",
+    "Vertical Scroll Bar": "Barra de defilament verticala",
     "Vertical Text": "Tèxte vertical",
     "Vertical Title, Text, Chart": "Títol vertical, tèxte, diagrama",
     "Vertical Title, Vertical Text": "Títol vertical, tèxte vertical",
@@ -2840,7 +2840,7 @@
     "~Sampling...": "~Escandalhatge...",
     "~Save": "~Enregistrar",
     "~Save...": "Enregi~strar...",
-    "~Scrollbars": "Barra~s de desfilament",
+    "~Scrollbars": "Barra~s de defilament",
     "~Secondary X Axis...": "~Axe X segondari...",
     "~Sections...": "~Seccions...",
     "~Select": "~Seleccionar",
