--- a/browser/l10n/uno/pl.json
+++ b/browser/l10n/uno/pl.json
@@ -149,7 +149,7 @@
     "AutoFill Data Series: automatic": "Autowypełnianie serii danych: automatycznie",
     "AutoFilter": "Autofiltr",
     "AutoPilot: Address Data Source": "Autopilot: Źródło danych adresowych",
-    "AutoPilot: Agenda": "Autopilot: Plan spotkania",
+    "AutoPilot: Agenda": "Autopilot: Agenda",
     "AutoPilot: Fax": "Autopilot: Faks",
     "AutoPilot: Letter": "Autopilot: List",
     "AutoPilot: Memo": "Autopilot: Memorandum",
@@ -208,7 +208,7 @@
     "Border Style": "Styl krawędzi",
     "Borders": "Krawędzie",
     "Borders (Shift to overwrite)": "Krawędzie (przesuń, aby nadpisać)",
-    "Bottom": "Dół",
+    "Bottom": "Do dołu",
     "Bottom Align on Section": "Wyrównanie sekcji do dołu",
     "Bottom Left to Top Right": "Z lewego dolnego do prawego górnego rogu",
     "Bottom Right to Top Left": "Z prawego dolnego do lewego górnego rogu",
@@ -244,7 +244,7 @@
     "Cell Edit Mode": "Tryb edycji komórki",
     "Cell Protection": "Ochrona komórek",
     "Cell ~Comments": "Komentarze do ~komórki",
-    "Center": "Środek",
+    "Center": "Do środka",
     "Center Horizontal": "Do środka w poziomie",
     "Center Revolve": "Okrążanie",
     "Center Vertically": "Wyśrodkuj w pionie",
@@ -903,12 +903,12 @@
     "Format X Error Bars...": "Formatuj słupki błędów X...",
     "Format Y Error Bars...": "Formatuj słupki błędów Y...",
     "Format as Currency": "Ustawienie formatu na walutowy",
-    "Format as Date": "Ustawienie formatu na datę",
-    "Format as General": "Formatuj jako ogólne",
+    "Format as Date": "Ustawienie formatu na datowy",
+    "Format as General": "Ustawienie formatu na ogólny",
     "Format as Number": "Ustawienie formatu na liczbowy",
     "Format as Percent": "Ustawienie formatu na procentowy",
-    "Format as Scientific": "Formatuj jako naukowe",
-    "Format as Time": "Ustawienie formatu na czas",
+    "Format as Scientific": "Ustawienie formatu na naukowy",
+    "Format as Time": "Ustawienie formatu na godzinowy",
     "Format ~Cells...": "Formatowanie ~komórek...",
     "Format ~Page...": "~Formatowanie strony...",
     "Formatted Field": "Pole sformatowane",
@@ -1273,7 +1273,7 @@
     "Layout": "Układ",
     "Layouts": "Układy",
     "La~yer": "Wars~twa",
-    "Left": "Z lewej",
+    "Left": "Do lewej",
     "Left Align on Section": "Wyrównanie sekcji do lewej",
     "Left Arrow": "Strzałka w lewo",
     "Left Arrow Callout": "Objaśnienie ze strzałką w lewo",
@@ -1471,7 +1471,7 @@
     "Next Track Change": "Następna śledzona zmiana",
     "Ne~xt Error": "Następny błą~d",
     "No List": "Bez listy",
-    "No ~Character Style": "Brak stylu ~znaków",
+    "No ~Character Style": "Brak stylu ~znaku",
     "No-~width Optional Break": "Podział opcjonalny zero~wej szerokości",
     "None": "Brak",
     "Notched Right Arrow": "Strzałka w prawo ze wcięciem",
@@ -1708,7 +1708,7 @@
     "Recently Used": "Ostatnio używane",
     "Record": "Rekord",
     "Record Macro": "Zarejestruj makro",
-    "Record Track Changes": "Rejestruj śledzone zmiany",
+    "Record Track Changes": "Rejestruj śledzenie zmian",
     "Rectangle": "Prostokąt",
     "Rectangle Redaction": "Redagowanie prostokątem",
     "Rectangle, Rounded": "Prostokąt, zaokrąglony",
@@ -1746,7 +1746,7 @@
     "Remove Direct Character Formats": "Wyczyść bezpośrednie formatowanie znaków",
     "Remove Noise": "Usuń szum",
     "Remove Text Box": "Usuń pole tekstowe",
-    "Remove applied character style": "Usuń zastosowany styl znaków",
+    "Remove applied character style": "Usuń zastosowany styl znaku",
     "Remove ~All Traces": "Usuń wszystkie śla~dy",
     "Remove ~Column Break": "~Usuń podział kolumny",
     "Remove ~Dependents": "Usuń zal~eżności",
@@ -1808,7 +1808,7 @@
     "Resume streaming": "Wznów strumieniowanie",
     "Reveal Underline": "Podkreślenie",
     "Re~load": "Załaduj pono~wnie",
-    "Right": "Z prawej",
+    "Right": "Do prawej",
     "Right Align on Section": "Wyrównanie sekcji do prawej",
     "Right Arrow": "Strzałka w prawo",
     "Right Arrow Callout": "Objaśnienie ze strzałką w prawo",
@@ -2221,12 +2221,12 @@
     "Table Boundaries": "Granice tabeli",
     "Table Cell Background Color": "Kolor tła komórki tabeli",
     "Table Control": "Formant tabeli",
-    "Table Data": "Widok tabeli danych",
+    "Table Data": "Dane tabeli",
     "Table Design": "Projekt tabeli",
     "Table Design...": "Projekt tabeli...",
     "Table Filter...": "Filtr tabeli...",
     "Table Properties": "Właściwości tabeli",
-    "Table Styles": "Style tabel",
+    "Table Styles": "Style tabeli",
     "Table Wizard...": "Kreator tabeli...",
     "Table name": "Nazwa tabeli",
     "Table of Contents": "Spis treści",
@@ -2410,7 +2410,7 @@
     "Toggle pause": "Wstrzymaj",
     "Toolbox": "Przybornik",
     "Tools": "Narzędzia",
-    "Top": "Góra",
+    "Top": "Do góry",
     "Top Align on Section": "Wyrównanie sekcji do góry",
     "Top Left to Bottom Right": "Z lewego górnego do prawego dolnego rogu",
     "Top Right to Bottom Left": "Z prawego górnego do lewego dolnego rogu",
@@ -2553,7 +2553,7 @@
     "~3D Effects": "Efekty ~3D",
     "~3D View...": "Widok ~3D...",
     "~About %PRODUCTNAME": "~Informacje o %PRODUCTNAME",
-    "~Accessibility Check...": "~Kontrola dostępności...",
+    "~Accessibility Check...": "~Sprawdzanie dostępności...",
     "~Add": "Dod~aj",
     "~Add Field": "Dod~aj pole",
     "~Add to List": "~Dodaj do listy",
@@ -2897,7 +2897,7 @@
     "~Text...": "~Tekst...",
     "~Thesaurus...": "W~yrazy bliskoznaczne...",
     "~Through": "~Na wskroś",
-    "~Time": "~Czas",
+    "~Time": "~Godzina",
     "~Time (fixed)": "Godzina (s~tała)",
     "~Tip of the day": "~Porada dnia",
     "~Tips": "~Wskazówki",
