--- a/browser/l10n/uno/pt-BR.json
+++ b/browser/l10n/uno/pt-BR.json
@@ -673,13 +673,13 @@
     "Email": "E-mail",
     "Email as P~DF...": "Por e-mail como P~DF...",
     "Email as ~Microsoft Excel...": "Por e-mail como ~Microsoft Excel...",
-    "Email as ~Microsoft Format...": "E-mail com o documento em formato ~Microsoft...",
-    "Email as ~Microsoft PowerPoint Presentation...": "E-mail com o documento no formato ~Microsoft PowerPoint...",
-    "Email as ~Microsoft Word...": "Por e-mail como Microsoft ~Word...",
-    "Email as ~OpenDocument Format...": "E-mail com o documento em formato ~OpenDocument...",
-    "Email as ~OpenDocument Presentation...": "E-mail com a apresentação no formato ~OpenDocument...",
-    "Email as ~OpenDocument Spreadsheet...": "E-mail com o documento em formato ~OpenDocument...",
-    "Email as ~OpenDocument Text...": "E-mail com o documento em formato ~OpenDocument Text...",
+    "Email as ~Microsoft Format...": "Por e-mail no formato ~Microsoft...",
+    "Email as ~Microsoft PowerPoint Presentation...": "Por e-mail como apresentação do ~Microsoft PowerPoint...",
+    "Email as ~Microsoft Word...": "Por e-mail como ~Microsoft Word...",
+    "Email as ~OpenDocument Format...": "Por e-mail no formato ~OpenDocument...",
+    "Email as ~OpenDocument Presentation...": "Por e-mail como apresentação ~OpenDocument...",
+    "Email as ~OpenDocument Spreadsheet...": "Por e-mail como planilha ~OpenDocument...",
+    "Email as ~OpenDocument Text...": "Por e-mail como documento de texto ~OpenDocument...",
     "Emphasis Character Style": "Estilo de caractere Ênfase",
     "Empty": "Vazio",
     "Enable Watch": "Ativar inspeção",
