--- a/browser/l10n/uno/ru.json
+++ b/browser/l10n/uno/ru.json
@@ -83,7 +83,7 @@
     "Alignment": "Выравнивание",
     "Alig~n Objects": "Выравнивание объектов",
     "All ~Changes Inline": "Все изменения в строке",
-    "Allow Interaction": "Разрешить действие по щелчку мыши",
+    "Allow Interaction": "Разрешить взаимодействие",
     "Allow Quick Editing": "Разрешить быструю правку",
     "Anchor Menu": "Привязка",
     "Anchor To Frame": "Привязка к рамке",
@@ -108,7 +108,7 @@
     "Apply Page Style": "Применить стиль страницы",
     "Apply Style": "Стиль",
     "Apply Suggestion": "Применить предложенное",
-    "Apply and Edit ~Changes": "Принять или отклонить изменения...",
+    "Apply and Edit ~Changes": "Принять или отклонить исправления...",
     "Apply document classification": "Применить классификацию документа",
     "Apply outline attribute to font. Not all fonts implement this attribute.": "Применяет атрибут контура к шрифту. Не все шрифты реализуют этот атрибут.",
     "Appl~y": "Применить",
@@ -267,7 +267,7 @@
     "Character Font Effects...": "Эффекты шрифта...",
     "Character Font Position...": "Положение шрифта...",
     "Character Highlighting Color": "Цвет подсветки символов",
-    "Character Highlighting Color (in Text Box and Shapes)": "Цвет подсветки символов (в текстовых объектах)",
+    "Character Highlighting Color (in Text Box and Shapes)": "Цвет подсветки символов (в «Текстовое поле и форма»)",
     "Character Spacing": "Межсимвольный интервал",
     "Charcoal Sketch": "Набросок углём",
     "Chart": "Диаграмма",
@@ -316,7 +316,7 @@
     "Clone": "Копировать формат",
     "Clone Formatting": "Копировать формат",
     "Clone Formatting (double click and Ctrl or Cmd to alter behavior)": "Копировать формат (двойной щелчок с Ctrl или Cmd для смены поведения)",
-    "Clone Formatting (double click for multi-selection)": "Копировать формат (двойной щелчок для мультивыделения)",
+    "Clone Formatting (double click for multi-selection)": "Копировать формат (двойной щелчок для мультивыбора)",
     "Close": "Закрыть",
     "Close Bézier": "Замкнуть кривую Безье",
     "Close Find Bar": "Закрыть панель поиска",
@@ -378,7 +378,7 @@
     "Connector with Arrows": "Соединительная линия со стрелками",
     "Connector with Circles": "Соединительная линия с кругами",
     "Connector\/Freeform Line": "Соединитель\/полилиния",
-    "Connectors": "Соединительная линия",
+    "Connectors": "Соединительные линии",
     "Consolidate Text": "Объединить текст",
     "Content Control Properties": "Свойства ЭУС",
     "Content Controls": "Элементы управления содержимым",
@@ -563,7 +563,7 @@
     "Descend": "Проявление сверху",
     "Descending": "По убыванию",
     "Description...": "Описание...",
-    "Deselect All Sheets": "Снять выделение",
+    "Deselect All Sheets": "Снять выбор всех листов",
     "Design": "Дизайн",
     "Design Mode": "Режим дизайна",
     "Design Mode On\/Off": "Режим дизайна",
@@ -600,7 +600,7 @@
     "Distribute Horizontally Right": "Распределить горизонтально право",
     "Distribute Horizontally Spacing": "Распределить горизонтально интервал",
     "Distribute Rows Evenly": "Выровнять высоту строк",
-    "Distribute Selection": "Распределить выделение",
+    "Distribute Selection": "Распределить выбранное",
     "Distribute Vertically Bottom": "Распределить вертикально низ",
     "Distribute Vertically Center": "Распределить вертикально середину",
     "Distribute Vertically Spacing": "Распределить вертикально интервал",
@@ -680,7 +680,7 @@
     "Email as ~OpenDocument Presentation...": "Эл. почтой как ~презентацию ODF...",
     "Email as ~OpenDocument Spreadsheet...": "Эл. почтой как ~таблицу ODF...",
     "Email as ~OpenDocument Text...": "Эл. почтой как ~текст ODF...",
-    "Emphasis Character Style": "Стиль символов с выделением",
+    "Emphasis Character Style": "Стиль символов с акцентом",
     "Empty": "Пусто",
     "Enable Watch": "Включить инспектор",
     "End media": "Остановить воспроизведение",
@@ -721,13 +721,13 @@
     "Export as Image": "Экспорт изображения",
     "Export as PDF": "Экспорт в PDF",
     "Expor~t...": "Экспорт...",
-    "Extended Selection On": "Вкл. расширенное выделение",
+    "Extended Selection On": "Расширенный выбор вкл.",
     "Extrusion": "Экструзия",
     "Extrusion Depth": "Глубина экструзии",
     "E~dit Mode": "Редактирование",
     "E~dit Style...": "Изменить стиль...",
     "E~mphasis": "Выделение",
-    "E~xecute Interaction...": "Выполнить действие...",
+    "E~xecute Interaction...": "Выполнить взаимодействие...",
     "E~xit": "Выход",
     "E~xit Group": "Выйти из группы",
     "E~xpand Slide": "Расширить слайд",
@@ -855,7 +855,7 @@
     "Footnote and Endno~te": "Сноска",
     "For All Text": "Для всего текста",
     "For Paragraph": "Для абзаца",
-    "For Selection": "Для выделения",
+    "For Selection": "Для выбранного",
     "Form": "Форма",
     "Form Check Box": "Форма - Флажок",
     "Form Combo Box": "Форма - Поле со списком",
@@ -891,7 +891,7 @@
     "Format Minor Grid...": "Формат доп. сетки...",
     "Format Page": "Формат страницы",
     "Format Pa~ge...": "Формат страницы...",
-    "Format Selection...": "Формат выделения...",
+    "Format Selection...": "Формат выбранного...",
     "Format Single Data Label...": "Формат отдельной подписи к данным...",
     "Format Slide": "Формат слайда",
     "Format Stock Gain...": "Формат белых свечей...",
@@ -1104,7 +1104,7 @@
     "Import MathML from Clipboard": "Импорт MathML из буфера обмена",
     "Impress R~emote...": "Пульт ДУ Impress...",
     "In": "Внутрь",
-    "In 3D Rotation Object": "В 3D-тело вращения",
+    "In 3D Rotation Object": "В тело вращения",
     "In Front of ~Object": "Перед объектом",
     "In from screen center": "Увеличение из центра экрана",
     "In slightly": "Небольшое увеличение",
@@ -1180,7 +1180,7 @@
     "Insert Mean ~Value Line": "Вставить линию среднего значения",
     "Insert Minor Grid": "Вставить доп. сетку",
     "Insert Mode": "Режим вставки",
-    "Insert N~arrow No-break Space": "Вставить узкий неразрывный пробел",
+    "Insert N~arrow No-break Space": "Неразрывный узкий пробел",
     "Insert OLE Object": "Вставить объект OLE",
     "Insert Object": "Вставка объекта",
     "Insert Other Objects": "Вставить дополнительные объекты",
@@ -1225,13 +1225,13 @@
     "Insert Y Error ~Bars...": "Вставить полосы погрешностей Y...",
     "Insert columns after": "Вставить столбцы после",
     "Insert columns before": "Вставить столбцы перед",
-    "Insert non-br~eaking hyphen": "Вставить неразрывный дефис",
+    "Insert non-br~eaking hyphen": "Неразрывный дефис",
     "Insert or Edit Formula": "Вставить или изменить формулу",
     "Insert or Edit Pivot Table": "Вставить или изменить сводную таблицу",
     "Insert rows above": "Вставить строки выше",
     "Insert rows below": "Вставить строки ниже",
     "Insert single-column frame manually": "Вставить фрейм (одноколоночный)",
-    "Insert s~oft Hyphen": "Вставить мягкий перенос",
+    "Insert s~oft Hyphen": "Мягкий перенос",
     "Insert ~Cells...": "Вставить ячейки...",
     "Insert ~Column Break": "Вставить разрыв по столбцу",
     "Insert ~Row Break": "Вставить разрыв по строке",
@@ -1240,7 +1240,7 @@
     "Insert ~Rows Below": "Вставить строки ниже",
     "Insert ~Sheet...": "Вставить лист...",
     "Insert ~Table...": "Вставить таблицу...",
-    "Insert ~non-breaking space": "Вставить неразрывный пробел",
+    "Insert ~non-breaking space": "Неразрывный пробел",
     "Insert\/Delete Axes...": "Вставить\/Удалить оси...",
     "Inside": "Внутрь",
     "Inspect Object": "Инспектор объекта",
@@ -1265,7 +1265,7 @@
     "Language Status": "Статус языка",
     "Language for All Text": "Язык для всего текста",
     "Language for Paragraph": "Язык для абзаца",
-    "Language for Selection": "Язык для выделения",
+    "Language for Selection": "Язык для выбранного",
     "Last Mail Merge Entry": "Последняя запись рассылки",
     "Last Page": "Последняя страница",
     "Last Record": "Последняя запись",
@@ -1295,7 +1295,7 @@
     "Lighting": "Освещение",
     "Lightning Bolt": "Молния",
     "Limit": "Ограничение",
-    "Line": "Line",
+    "Line": "Линия",
     "Line (45°)": "Линия (45°)",
     "Line Callout 1": "Выноска 1",
     "Line Callout 2": "Выноска 2",
@@ -1351,7 +1351,7 @@
     "Mail Merge Wi~zard...": "Рассылка писем...",
     "Main ~Toolbar": "Главная панель инструментов",
     "Manage Breakpoints": "Управление точками останова",
-    "Manage Changes": "Управление изменениями",
+    "Manage Changes": "Управление исправлениями",
     "Manage Conditional Formatting...": "Управление условным форматированием...",
     "Manage Document Classification": "Управление классификацией документа",
     "Manage Language": "Управление языками",
@@ -1431,9 +1431,9 @@
     "Move selected paragraphs down one paragraph": "Переместить выбранные абзацы на один ниже",
     "Move selected paragraphs up one paragraph": "Переместить выбранные абзацы на один выше",
     "Movie Credits": "Титры",
-    "MultiSelection On": "Вкл. групповое выделение",
+    "MultiSelection On": "Групповой выбор вкл.",
     "Multiple Pages Preview": "Многостраничный просмотр",
-    "Multiple Selection": "Мультивыделение",
+    "Multiple Selection": "Мультивыбор",
     "M~aster Notes": "Мастер-примечаний",
     "M~erge and Center Cells": "О~бъединить и центрировать ячейки",
     "M~erge and Unmerge Cells": "Объединить или разъединить ячейки",
@@ -1519,7 +1519,7 @@
     "Open Remote File": "Открыть файл удалённо",
     "Open Templates Manager": "Управление шаблонами",
     "Open dialog to insert OLE object": "Открыть диалоговое окно для вставки объекта OLE",
-    "Open in Design Mode": "Открывать в режиме дизайна",
+    "Open in Design Mode": "Открыть в режиме дизайна",
     "Open the Custom Animation Deck": "Открыть панель «Настройки анимации»",
     "Open the Elements Deck": "Открыть панель Элементы",
     "Open the Functions Deck": "Открыть панель функций",
@@ -1890,8 +1890,8 @@
     "Section": "Раздел",
     "Section alignment": "Выравнивание раздела",
     "Select": "Выделить",
-    "Select All": "Выделить всё",
-    "Select All Sheets": "Выделить все листы",
+    "Select All": "Выбрать всё",
+    "Select All Sheets": "Выбрать все листы",
     "Select Array Formula": "Выбрать формулу массива",
     "Select Cell": "Выбрать ячейку",
     "Select Character Left": "Выделить символ слева",
@@ -1924,7 +1924,7 @@
     "Select Visible Rows Only": "Выбирать только видимые строки",
     "Select Word": "Выделить слово",
     "Select all Formatted Fields": "Выбрать все форматированные поля",
-    "Select all Labels": "Выделить все подписи",
+    "Select all Labels": "Выбрать все подписи",
     "Select anchor for object": "Выбор привязки для объекта",
     "Select at least three objects to distribute": "Выберите как минимум три объекта для распределения",
     "Select start and end arrowheads for lines.": "Выберите стили стрелок начала и конца линий.",
@@ -1956,7 +1956,7 @@
     "Select to Right Block Margin": "Выделить до правого края блока",
     "Select to Top Line": "Выделить до верхней строки",
     "Select to Upper Block Margin": "Выделить до верхнего края блока",
-    "Select ~All": "Выделить всё",
+    "Select ~All": "Выбрать всё",
     "Select ~Range...": "Выбрать диапазон...",
     "Selection List": "Список выбора",
     "Selection Mode": "Режим выбора",
@@ -2174,9 +2174,9 @@
     "Stretchy": "Растяжение",
     "Strikethrough": "Зачёркнутый",
     "Striped Right Arrow": "Штриховая стрелка вправо",
-    "Strong Emphasis Character Style": "Стиль символов с сильным выделением",
+    "Strong Emphasis Character Style": "Стиль символов с сильным акцентом",
     "Style": "Стиль",
-    "Style Emphasis": "Выделение начертания",
+    "Style Emphasis": "Стилевой акцент",
     "Style Inspector": "Инспектор стилей",
     "Style Presets": "Предустановки стилей",
     "Styles": "Стили",
@@ -2423,7 +2423,7 @@
     "Track Changes": "Отслеживать исправления",
     "Track Changes Functions": "Показать панель исправлений",
     "Track Chan~ges": "Отслеживать изменения",
-    "Transformations": "Преобразования",
+    "Transformations": "Трансформации",
     "Translate...": "Перевести...",
     "Transparency": "Прозрачность",
     "Transparency tool": "Прозрачность",
@@ -2449,7 +2449,7 @@
     "Underline": "Подчёркивание",
     "Underline: Off": "Подчёркивание: выкл.",
     "Undo": "Отменить",
-    "Undo Selection": "Отменить выделение",
+    "Undo Selection": "Отменить выбор",
     "Undo: Data entry": "Отменить: ввод данных",
     "Unfold": "Развёртывание",
     "Ungroup Sparklines": "Разгруппировать спарклайны",
@@ -2733,7 +2733,7 @@
     "~Insert or Edit...": "Вставить или изменить...",
     "~Insert...": "Вставка...",
     "~Insertions In Margin": "Вставленное на полях",
-    "~Interaction...": "Де~йствие по щелчку мыши...",
+    "~Interaction...": "Взаимоде~йствие...",
     "~Katakana": "Катакана",
     "~Labels...": "Подписи...",
     "~Layer": "Слой",
@@ -2769,7 +2769,7 @@
     "~Nested Table": "Вложенная таблица",
     "~New": "Создать",
     "~New Slide": "Создать слайд",
-    "~New Style from Selection": "Создать стиль по выделению",
+    "~New Style from Selection": "Создать стиль по выбранному",
     "~New Window": "~Новое окно",
     "~Next Marker": "Следующая метка",
     "~Normal": "Обычный",
@@ -2879,7 +2879,7 @@
     "~Split Window": "Разделить окно",
     "~Standard": "По умолчанию",
     "~Standard Filter...": "Стандартный фильтр...",
-    "~Strong Emphasis": "Сильное выделение",
+    "~Strong Emphasis": "Сильный акцент",
     "~Subject": "Тема",
     "~Subreport in New Window...": "Подчин. отчёт в новом окне...",
     "~Subtitle...": "Подзаголовок...",
@@ -2942,7 +2942,7 @@
     "~Z Axis Major Grid...": "Основная сетка оси ~Z...",
     "~Z Axis Title...": "Подпись оси Z...",
     "~Z Axis...": "Ось ~Z...",
-    "~Z-test...": "Z-тест...",
+    "~Z-test...": "Z-критерий...",
     "~Zoom": "Масштаб",
     "~Zoom...": "Масштаб...",
     "~lowercase": "стро~чные буквы",
