--- a/browser/l10n/uno/sk.json
+++ b/browser/l10n/uno/sk.json
@@ -348,7 +348,7 @@
     "Colu~mn": "~Stĺpec",
     "Colu~mns": "Stĺp~ce",
     "Comb": "Hrebeň",
-    "Combo Box": "Rozbaľovacie pole",
+    "Combo Box": "Pole so zoznamom",
     "Comb~ine": "Zlož~iť",
     "Comment": "Poznámka",
     "Comments": "Poznámky",
@@ -626,7 +626,7 @@
     "Drawing": "Kresba",
     "Drawing Object Properties": "Vlastnosti objektu kresby",
     "Drawing objects": "Grafické objekty",
-    "Drop Caps": "Iniciálky",
+    "Drop Caps": "Iniciály",
     "Drop-Down Form Field": "Riadiaci prvok rozbaľovacieho zoznamu",
     "Duplicate Page": "Duplikovať stránku\/snímku",
     "Duplicate Sheet": "Duplikovať hárok",
@@ -711,7 +711,7 @@
     "Export BASIC...": "Exportovať BASIC...",
     "Export Dialog...": "Dialógové okno exportovania...",
     "Export Directly as EPUB": "Exportovať priamo ako EPUB",
-    "Export Directly as PDF": "Exportovať priamo do PDF",
+    "Export Directly as PDF": "Exportovať priamo ako PDF",
     "Export Directly to PDF as Bitmap": "Exportovať priamo do formátu PDF ako bitmapu",
     "Export Preview PDF": "Exportovať PDF s náhľadom",
     "Export Redacted PDF (Black)": "Exportovať anonymizované PDF (čierna)",
@@ -1309,7 +1309,7 @@
     "Line Connector Starts with Circle": "Zalomená spojnica začínajúca krúžkom",
     "Line Connector with Arrows": "Zalomená spojnica so šípkami",
     "Line Connector with Circles": "Priama spojnica s krúžkami",
-    "Line Contour Only": "Iba obrys",
+    "Line Contour Only": "Len obrys",
     "Line Corner Style": "Štýl rohov čiary",
     "Line Dash\/Dot": "Čiara čiarkovaná\/bodkovaná",
     "Line Ends with Arrow": "Čiara končiaca šípkou",
@@ -1502,7 +1502,7 @@
     "Numbering ivx List Style": "Štýl zoznamu Číslovanie ivx",
     "Numeric Field": "Číselné pole",
     "Numerical Field": "Číselné pole",
-    "OLE Object": "Objekt OLE",
+    "OLE Object": "OLE objekt",
     "OLE Object Insert Menu": "Menu Vložiť OLE objekt",
     "OLE Object Properties": "Vlastnosti OLE objektu",
     "OLE Ob~ject": "OLE ~objekt",
@@ -1701,7 +1701,7 @@
     "Random": "Náhodne",
     "Random Bars": "Náhodné pruhy",
     "Random Effects": "Náhodné efekty",
-    "Read Only Mode": "Režim iba na čítanie",
+    "Read Only Mode": "Režim len na čítanie",
     "Rebuild": "Obnoviť",
     "Recalculate Hard": "Prepočítať ihneď",
     "Recent Doc~uments": "Nedávne dok~umenty",
@@ -1920,8 +1920,8 @@
     "Select Tool": "Vybrať nástroj",
     "Select Unprotected Cells": "Vybrať odomknuté bunky",
     "Select Up": "Vybrať nahor",
-    "Select Visible Columns Only": "Vybrať iba viditeľné stĺpce",
-    "Select Visible Rows Only": "Vybrať iba viditeľné riadky",
+    "Select Visible Columns Only": "Vybrať len viditeľné stĺpce",
+    "Select Visible Rows Only": "Vybrať len viditeľné riadky",
     "Select Word": "Vybrať slovo",
     "Select all Formatted Fields": "Vybrať všetky formátované polia",
     "Select all Labels": "Vybrať všetky popisy",
@@ -2011,7 +2011,7 @@
     "Show Hidden Row\/Column Indicator": "Zobraziť označenie skrytého riadku\/stĺpca",
     "Show Insertions In Margin": "Vloženia zobraziť na okraji",
     "Show Navigator Window": "Zobraziť okno navigátora",
-    "Show Only First Level": "Zobraziť iba prvú úroveň",
+    "Show Only First Level": "Zobraziť len prvú úroveň",
     "Show Outline Content up to Level...": "Zobraziť úroveň osnovy obsahu až po...",
     "Show Subpoints": "Zobraziť podčasti",
     "Show Tip of the Day": "Zobraziť tip dňa",
@@ -2284,10 +2284,10 @@
     "Tilt Up": "Nakloniť hore",
     "Time": "Čas",
     "Time Field": "Časové pole",
-    "Title Only": "Iba nadpis",
+    "Title Only": "Len nadpis",
     "Title Page...": "Titulná strana...",
     "Title Paragraph Style": "Štýl odseku Názov",
-    "Title Slide": "Titulná snímka",
+    "Title Slide": "Úvodná snímka",
     "Title and 2 Content": "Nadpis a 2 x obsah",
     "Title, 2 Content and Content": "Nadpis, 2 x obsah, obsah",
     "Title, 2 Content over Content": "Nadpis, 2 x obsah nad obsahom",
