--- a/browser/l10n/uno/sv.json
+++ b/browser/l10n/uno/sv.json
@@ -1063,7 +1063,7 @@
     "Hide All Comments": "Dölj alla kommentarer",
     "Hide Comment": "Dölj kommentar",
     "Hide Subpoints": "Dölj understycken",
-    "Hide Whitespac~e": "Dölj tomt utrymm~e",
+    "Hide Whitespac~e": "~Dölj blanksteg",
     "Highlight Color": "Markeringsfärg",
     "Honeycomb": "Bikaka",
     "Horizontal": "Horisontellt",
@@ -2018,7 +2018,7 @@
     "Show Track Changes": "Visa spårändringar",
     "Show Track Changes Functions": "Visa funktioner för spårade ändringar",
     "Show Tracked ~Changes": "Visa ~spårade ändringar",
-    "Show Whitespac~e": "Visa tomt utrymm~e",
+    "Show Whitespac~e": "~Visa blanksteg",
     "Show change authorship in tooltips": "Visa ändra författarskap i verktygstips",
     "Show outline-folding buttons": "Visa knappar för fällbar disposition",
     "Show resolved comme~nts": "~Visa lösta kommentarer",
