--- a/browser/l10n/uno/tr.json
+++ b/browser/l10n/uno/tr.json
@@ -672,7 +672,7 @@
     "Ellipse, Unfilled": "Boş Elips",
     "Email": "E-posta",
     "Email as P~DF...": "P~DF Olarak Gönder...",
-    "Email as ~Microsoft Excel...": "Microsoft Excel olarak gönder...",
+    "Email as ~Microsoft Excel...": "~Microsoft Excel olarak gönder...",
     "Email as ~Microsoft Format...": "~Microsoft Biçimi Olarak Gönder...",
     "Email as ~Microsoft PowerPoint Presentation...": "~Microsoft PowerPoint Sunum Olarak Gönder...",
     "Email as ~Microsoft Word...": "~Microsoft Word Olarak Gönder...",
@@ -1531,7 +1531,7 @@
     "Open the Shapes Deck": "Şekiller Penceresini Aç",
     "Open the Slide Transition Deck": "Slayt Geçiş Penceresini Aç",
     "Open the Style Inspector Deck": "Biçem Denetçisi Penceresini Aç",
-    "Open the Styles Deck": "Biçemler   Penceresini Aç",
+    "Open the Styles Deck": "Biçemler Penceresini Aç",
     "Open the release notes for the installed version in the default browser": "Varsayılan tarayıcıda yüklenen sürümün sürüm notlarını açar",
     "Open ~Remote File...": "Uzak ~Dosya Aç...",
     "Open ~Remote...": "~Uzaktan Aç...",
@@ -1793,10 +1793,10 @@
     "Report...": "Rapor...",
     "Reports": "Raporlar",
     "Reset Data Point": "Veri Noktasını Sıfırla",
-    "Reset Filter": "Filtreyi Sil",
+    "Reset Filter": "Süzgeci Sıfırla",
     "Reset Filter\/Sort": "Süzgeci\/Sıralamayı Kaldır",
     "Reset R~otation": "D~önmeyi Sıfırla",
-    "Reset Scale": "Ölçeklendirmeyi Kaldır",
+    "Reset Scale": "Ölçeklendirmeyi Sıfırla",
     "Reset all Data Points": "Tüm Veri Noktalarını Sıfırla",
     "Reset line skew": "Çizgi eğriliğini sıfırla",
     "Resize": "Boyutu Değiştir",
@@ -2012,7 +2012,7 @@
     "Show Insertions In Margin": "Eklenenleri Kenar Çubuğunda Göster",
     "Show Navigator Window": "Gezgin Penceresini Göster",
     "Show Only First Level": "Sadece İlk Seviyeyi Göster",
-    "Show Outline Content up to Level...": "Show Outline Content up to Level...",
+    "Show Outline Content up to Level...": "Seviyeye Kadar Anahat İçeriğini Göster...",
     "Show Subpoints": "Alt Bölümleri Göster",
     "Show Tip of the Day": "Günün İpucunu Göster",
     "Show Track Changes": "Değişiklikleri İzlemeyi Göster",
@@ -2268,7 +2268,7 @@
     "Te~mplates": "~Şablonlar",
     "Te~xt": "Me~tin",
     "Te~xt <-> Table...": "Me~tin <-> Tablo...",
-    "Te~xt Attributes...": "Metin Öznitelikleri...",
+    "Te~xt Attributes...": "Me~tin Öznitelikleri...",
     "Te~xt Boundaries": "Me~tin Sınırları",
     "Te~xt to Columns...": "Metin~den Sütunlara...",
     "Te~xt...": "Me~tin...",
@@ -2418,7 +2418,7 @@
     "Torus": "Halka",
     "Total No. of Records": "Toplam Kayıt Sayısı",
     "Trace ~Error": "~Hataları İzle",
-    "Trace ~Precedent": "Öncekini ~İzle",
+    "Trace ~Precedent": "Emsali ~İzle",
     "Trace ~Precedents": "Emsalleri ~İzle",
     "Track Changes": "Değişiklikleri İzle",
     "Track Changes Functions": "Değişiklikleri İzleme İşlevleri",
@@ -2517,7 +2517,7 @@
     "View Headers": "Başlıkları Göster",
     "View Images and Charts": "Resimler ve Grafikleri Görüntüle",
     "View Panel": "Paneli Göster",
-    "Views Tab ~Bar": "Görünümler Sekmesi Çubuğu",
+    "Views Tab ~Bar": "~Görünümler Sekmesi Çubuğu",
     "Vortex": "Girdap",
     "Warning": "Uyarı",
     "Warning Cell Style": "Uyarı Hücre Biçemi",
@@ -2571,7 +2571,7 @@
     "~AutoCorrect Options...": "Otoma~tik Düzeltme Seçenekleri...",
     "~AutoInput": "Otomatik ~Giriş",
     "~AutoOutline": "Otomatik ~Anahat",
-    "~AutoUpdate Display": "Görüntüyü Otomatik Güncelle",
+    "~AutoUpdate Display": "Görüntüyü ~Otomatik Güncelle",
     "~Automatic Spell Checking": "~Otomatik İmla Denetimi Yap",
     "~Axes...": "~Eksenler...",
     "~Basic Shapes": "~Temel Şekiller",
@@ -2819,8 +2819,8 @@
     "~Relations": "~İlişkiler",
     "~Remove Hyperlink": "~Köprüyü Kaldır",
     "~Remove Outline": "~Anahatı Kaldır",
-    "~Remove Precedent": "Öncekinin ~Sil",
-    "~Remove Precedents": "~Örnekleri Sil",
+    "~Remove Precedent": "Emsali ~Sil",
+    "~Remove Precedents": "~Emsalleri Sil",
     "~Rename Layer": "Katmanı ~Yeniden Adlandır",
     "~Replace with": "~Şununla Değiştir",
     "~Replace...": "~Değiştir...",
