--- a/browser/l10n/uno/ug.json
+++ b/browser/l10n/uno/ug.json
@@ -132,7 +132,7 @@
     "Arrow Shapes": "يا ئوق شەكىللىرى",
     "Arrow Style": "ئىسترېلكا ئۇسلۇبى",
     "As C~haracter": "ھەرپ سۈپىتىدە(~H)",
-    "As ~Link": "As ~Link",
+    "As ~Link": "ئۇلانما سۈپىتىدە(~L)",
     "Ascend": "ئۆرلە",
     "Ascending": "ئۆسكۈچى",
     "Asian Phonetic G~uide...": "ئاسىيا تىللىرى تاۋۇش يېتەكچىسى(~U)…",
@@ -472,7 +472,7 @@
     "Data Series": "سانلىق مەلۇمات تەرتىپى",
     "Data Source of Current Document": "نۆۋەتتىكى پۈتۈكنىڭ سانلىق مەلۇمات مەنبەسى",
     "Data Streams": "سانلىق مەلۇمات ئېقىمى",
-    "Data Table...": "Data Table...",
+    "Data Table...": "سانلىق مەلۇمات جەدۋىلى…",
     "Data in Columns": "رەت سانلىق مەلۇماتى",
     "Data in Rows": "قۇر سانلىق مەلۇماتى",
     "Data source as Table": "سانلىق مەلۇمات مەنبەسى ئاساسىدا جەدۋەل قۇر",
@@ -513,7 +513,7 @@
     "Delete C~ells...": "كاتەكچە ئۆچۈر(~E)…",
     "Delete C~ontents...": "مەزمۇن ئۆچۈر(~O)…",
     "Delete Data Labels": "سانلىق مەلۇمات بەلگىسى ئۆچۈر",
-    "Delete Data Table": "Delete Data Table",
+    "Delete Data Table": "سانلىق مەلۇمات جەدۋىلى ئۆچۈر",
     "Delete Decimal Place": "كەسىر چېكىتى خانىسى ئۆچۈر",
     "Delete Frame": "كاندۇك ئۆچۈر",
     "Delete History": "تارىخ خاتىرىسى ئۆچۈر",
@@ -531,8 +531,8 @@
     "Delete Rows": "Delete Rows",
     "Delete R²": "R² ئۆچۈر",
     "Delete Single Data Label": "يەككە سانلىق مەلۇمات بەلگىسى ئۆچۈر",
-    "Delete Sparkline": "Delete Sparkline",
-    "Delete Sparkline Group": "Delete Sparkline Group",
+    "Delete Sparkline": "ۋەزىيەت سىزىقى ئۆچۈر",
+    "Delete Sparkline Group": "ۋەزىيەت سىزىقى گۇرۇپپىسىنى ئۆچۈر",
     "Delete Table": "جەدۋەل ئۆچۈر",
     "Delete Trend Line ~Equation": "يۈزلىنىش سىزىق تەڭلىمىسى ئۆچۈر(~E)",
     "Delete Tre~nd Line": "يۈزلىنىش سىزىقى ئۆچۈر(~N)",
@@ -587,7 +587,7 @@
     "Directly to Document Begin": "بىۋاسىتە پۈتۈك بېشىغا يۆتكەل",
     "Directly to Document End": "بىۋاسىتە پۈتۈك ئاخىرىغا يۆتكەل",
     "Disappear": "غايىپ بول",
-    "Disco~nnect": "Disco~nnect",
+    "Disco~nnect": "باغلىنىشنى ئۈز(~N)",
     "Display Grid": "سېتكا كۆرسەت(~D)",
     "Display Views": "سۆز بۆلەك كۆرسەت",
     "Dissolve": "ئېرىت",
@@ -629,7 +629,7 @@
     "Drop Caps": "باش ھەرپ چوڭ",
     "Drop-Down Form Field": "Drop-Down Form Field",
     "Duplicate Page": "بەت كۆچۈر",
-    "Duplicate Sheet": "Duplicate Sheet",
+    "Duplicate Sheet": "ۋاراق كۆچۈر",
     "Duplicate ~Slide": "تام تەسۋىر نۇسخىلا(~S)",
     "Duplicat~e...": "كۆچۈرمە بۇيۇم(~E)…",
     "D~elete Page": "بەت ئۆچۈر(~E)",
@@ -653,12 +653,12 @@
     "Edit Print Ranges": "بېسىش دائىرىسى قوشىدۇ",
     "Edit Section...": "دائىرە تەھرىر",
     "Edit Signature ~Line...": "Edit Signature ~Line...",
-    "Edit Sparkline Group...": "Edit Sparkline Group...",
-    "Edit Sparkline...": "Edit Sparkline...",
+    "Edit Sparkline Group...": "ۋەزىيەت سىزىقى گۇرۇپپىسى تەھرىر…",
+    "Edit Sparkline...": "ۋەزىيەت سىزىقى تەھرىر…",
     "Edit in SQL View...": "SQL كۆرۈنۈشىدە تەھرىرلە…",
     "Edit index": "مۇندەرىجە تەھرىر",
     "Edit with External Tool": "سىرتقى قورالدا تەھرىرلە",
-    "Edit ~Database File...": "Edit ~Database File...",
+    "Edit ~Database File...": "ساندان ھۆججەت تەھرىر…",
     "Edit...": "تەھرىر…",
     "Effect": "Effect",
     "Elegant": "Elegant",
@@ -937,8 +937,8 @@
     "Freeform Line": "ئەركىن سىزىق",
     "Freeform Line, Filled": "ئەركىن سىزىق، رەڭ تولدۇرۇلغان",
     "Freeform Redaction": "Freeform Redaction",
-    "Freeze First Column": "Freeze First Column",
-    "Freeze First Row": "Freeze First Row",
+    "Freeze First Column": "بىرىنچى رەتنى توڭلات",
+    "Freeze First Row": "بىرىنچى قۇرنى توڭلات",
     "Freeze ~Cells": "كاتەكچە توڭلات(~C)",
     "Freeze ~Rows and Columns": "رەت ۋە قۇرنى توڭلات(~R)",
     "From bottom": "ئاستىدىن",
@@ -1021,7 +1021,7 @@
     "Grid to ~Front": "ئۈستىدىكى سېتكا(~F)",
     "Group": "گۇرۇپپا",
     "Group Box": "گۇرۇپپا رامكىسى",
-    "Group Sparklines": "Group Sparklines",
+    "Group Sparklines": "ۋەزىيەت سىزىقىنى گۇرۇپپىلا",
     "Groupedbar": "Groupedbar",
     "Groupedbar Compact": "Groupedbar Compact",
     "Grow With Color": "رەڭ سوز",
@@ -1058,7 +1058,7 @@
     "Hexagon": "ئالتە تەرەپلىك",
     "He~ader": "بەت قاشى(~A)",
     "He~ader and Footer": "بەت قاشى ۋە بەت ئاستى(~A)",
-    "Hidden Row\/Column Indicator": "Hidden Row\/Column Indicator",
+    "Hidden Row\/Column Indicator": "يوشۇرۇن قۇر\/رەت كۆرسەتكۈچ",
     "Hide": "يوشۇر",
     "Hide All Comments": "ھەممە ئىزاھاتنى يوشۇر",
     "Hide Comment": "ئىزاھات يوشۇر",
@@ -1102,7 +1102,7 @@
     "Import BASIC...": "Import BASIC...",
     "Import Dialog...": "Import Dialog...",
     "Import MathML from Clipboard": "چاپلاش تاختىسىدىن MathML ئەكىر",
-    "Impress R~emote...": "Impress R~emote...",
+    "Impress R~emote...": "Impress تىزگىنەك(~E)…",
     "In": "ئىچىگە",
     "In 3D Rotation Object": "3D ئايلانما جىسىمغا ئۆزگەر",
     "In Front of ~Object": "ئوبيېكت ئالدىدا(~O)",
@@ -1153,7 +1153,7 @@
     "Insert Current Date": "نۆۋەتتىكى چېسلانى قىستۇر",
     "Insert Current Time": "نۆۋەتتىكى ۋاقىتنى قىستۇر",
     "Insert Data Labels": "سانلىق مەلۇمات بەلگىسى قىستۇر",
-    "Insert Data Table": "Insert Data Table",
+    "Insert Data Table": "سانلىق مەلۇمات جەدۋىلى قىستۇر",
     "Insert Date Content Control": "Insert Date Content Control",
     "Insert Drop-Down List Content Control": "Insert Drop-Down List Content Control",
     "Insert Ellipse": "Insert Ellipse",
@@ -1387,7 +1387,7 @@
     "Merge Documen~t...": "پۈتۈك بىرلەشتۈر(~T)…",
     "Merge Table": "جەدۋەل بىرلەشتۈر",
     "Merge Track Changed Document": "Merge Track Changed Document",
-    "Merge and center or unmerge cells depending on the current toggle state": "Merge and center or unmerge cells depending on the current toggle state",
+    "Merge and center or unmerge cells depending on the current toggle state": "نۆۋەتتىكى ھالەتكە ئاساسەن ئىككى خىل ھالەتنى ئالماشتۇرىدۇ، كاتەكچىلەرنى بىرلەشتۈرۈپ ئوتتۇرىغا توغرىلايدۇ ياكى كاتەكچىلەرنى بۆلىدۇ.",
     "Merges text fragments from selected objects into one new textbox": "Merges text fragments from selected objects into one new textbox",
     "Me~dia Player": "ۋاسىتە قويغۇچ(~D)",
     "Middle on Section": "دائىرىنىڭ ئوتتۇرىدا",
@@ -1436,7 +1436,7 @@
     "Multiple Selection": "كۆپ تاللاش",
     "M~aster Notes": "M~aster Notes",
     "M~erge and Center Cells": "كاتەكچىلەرنى بىرلەشتۈرۈپ ئوتتۇرىغا توغرىلا(~E)",
-    "M~erge and Unmerge Cells": "M~erge and Unmerge Cells",
+    "M~erge and Unmerge Cells": "كاتەكچىلەرنى بىرلەشتۈر ياكى بۆل(~E)",
     "Name": "ئاتى",
     "Name...": "ئاتى…",
     "Navigate": "Navigate",
@@ -1455,12 +1455,12 @@
     "New Master": "يېڭى قېلىپ",
     "New Page": "يېڭى بەت",
     "New Presentation": "يېڭى كۆرسەتمە",
-    "New Query (~SQL View)": "New Query (~SQL View)",
+    "New Query (~SQL View)": "يېڭى سۈرۈشتۈرۈش (~SQL كۆرۈنۈش)",
     "New Record": "يېڭى خاتىرە",
     "New Relation...": "يېڭى مۇناسىۋەت…",
-    "New ~Query (Design View)": "New ~Query (Design View)",
-    "New ~Table Design": "New ~Table Design",
-    "New ~View Design": "New ~View Design",
+    "New ~Query (Design View)": "يېڭى سۈرۈشتۈرۈش(لايىھە كۆرۈنۈش)(~Q)",
+    "New ~Table Design": "يېڭى جەدۋەل لايىھە(~T)",
+    "New ~View Design": "يېڭى كۆرۈنۈش لايىھە(~V)",
     "Newsflash": "تېز خەۋەر",
     "Next": "تېكىست",
     "Next Comment": "كېيىنكى ئىزاھات",
@@ -1522,7 +1522,7 @@
     "Open in Design Mode": "لايىھە ھالەتتە ئاچ",
     "Open the Custom Animation Deck": "Open the Custom Animation Deck",
     "Open the Elements Deck": "Open the Elements Deck",
-    "Open the Functions Deck": "Open the Functions Deck",
+    "Open the Functions Deck": "فورمۇلا تاختىسىنى ئاچ",
     "Open the Gallery Deck": "Open the Gallery Deck",
     "Open the Master Slides Deck": "Open the Master Slides Deck",
     "Open the Navigator Deck": "Open the Navigator Deck",
@@ -1594,13 +1594,13 @@
     "Paragraph": "Paragraph",
     "Paragraph Style": "ئابزاس ئۇسلۇبىنى قوللان",
     "Parallelogram": "پاراللىل تۆت تەرەپلىك",
-    "Paste As Link": "Paste As Link",
+    "Paste As Link": "ئۇلانما سۈپىتىدە چاپلا",
     "Paste Only": "چاپلاشلا",
     "Paste Only Formula": "فورمۇلانىلا چاپلا",
     "Paste Only Numbers": "ساننىلا چاپلا",
     "Paste Only Text": "تېكىستنىلا چاپلا",
     "Paste Special": "ئۆزگىچە چاپلا",
-    "Paste Transposed": "Paste Transposed",
+    "Paste Transposed": "ئورۇن ئالماشتۇرۇپ چاپلا",
     "Paste Unformatted Text": "پىچىمسىز تېكىستنى چاپلا",
     "Paste as Columns Before": "Paste as Columns Before",
     "Paste as Nested Table": "Paste as Nested Table",
@@ -1729,7 +1729,7 @@
     "Refresh Tra~ces": "ئىز قوغلاش سترېلكىسىنى يېڭىلا(~C)",
     "Refresh document layout": "Refresh document layout",
     "Regenerate Diagram": "Regenerate Diagram",
-    "Registered databases ...": "خەتلەنگەن ساندان",
+    "Registered databases ...": "خەتلەنگەن ساندان…",
     "Regular Pentagon": "بەش تەرەپلىك",
     "Regular Triangle": "Regular Triangle",
     "Reject": "رەت قىل(_R)",
@@ -1753,9 +1753,9 @@
     "Remove ~Row Break": "قۇر ئالماشتۇرۇش بەلگىسى ئۆچۈر(~R)",
     "Rename": "ئات ئۆزگەرت",
     "Rename Master": "قېلىپ ئاتى ئۆزگەرت",
-    "Rename Page...": "Rename Page...",
+    "Rename Page...": "بەت ئاتىنى ئۆزگەرت…",
     "Rename Sheet": "ۋاراق ئاتىنى ئۆزگەرت",
-    "Rename Slide...": "Rename Slide...",
+    "Rename Slide...": "تام تەسۋىر ئاتىنى ئۆزگەرت…",
     "Rename S~heet...": "ۋاراق ئاتىنى ئۆزگەرت(~H)",
     "Rename...": "ئات ئۆزگەرت…",
     "Repeat Search": "قايتا ئىزدە",
@@ -1783,7 +1783,7 @@
     "Replace with Time Field": "ۋاقىت سۆز بۆلىكىگە ئالماشتۇر",
     "Reply Comment": "ئىزاھاتقا جاۋاب قايتۇر",
     "Report": "دوكلات",
-    "Report As Email...": "Report As Email...",
+    "Report As Email...": "ئېلخەتتە بىلدۈر…",
     "Report Controls": "دوكلات تىزگىنلىرى",
     "Report Header\/Footer": "دوكلات بەت قاش\/بەت ئاستى",
     "Report Navigator": "دوكلات يولباشچى",
@@ -1920,8 +1920,8 @@
     "Select Tool": "تاللاش قورالى",
     "Select Unprotected Cells": "قوغدالمىغان كاتەكچىلەرنى تاللا",
     "Select Up": "ئۈستىگە تاللا",
-    "Select Visible Columns Only": "Select Visible Columns Only",
-    "Select Visible Rows Only": "Select Visible Rows Only",
+    "Select Visible Columns Only": "كۆرۈنگەن رەتلەرنىلا تاللا",
+    "Select Visible Rows Only": "كۆرۈنگەن قۇرلارنىلا تاللا",
     "Select Word": "سۆز تاللا",
     "Select all Formatted Fields": "پىچىملىق ھەممە سۆز بۆلەكلىرىنى تاللا",
     "Select all Labels": "ھەممە بەلگىلەرنى تاللا",
@@ -2008,7 +2008,7 @@
     "Show Formatting": "پىچىمنى كۆرسەت",
     "Show Formula": "فورمۇلا كۆرسەت",
     "Show Gluepoint Functions": "Show Gluepoint Functions",
-    "Show Hidden Row\/Column Indicator": "Show Hidden Row\/Column Indicator",
+    "Show Hidden Row\/Column Indicator": "يوشۇرۇن قۇر\/رەت كۆرسەتكۈچنى كۆرسەت",
     "Show Insertions In Margin": "Show Insertions In Margin",
     "Show Navigator Window": "Show Navigator Window",
     "Show Only First Level": "بىرىنچى دەرىجىنىلا كۆرسەت",
@@ -2024,7 +2024,7 @@
     "Show resolved comme~nts": "Show resolved comme~nts",
     "Show the Styles Sidebar": "Show the Styles Sidebar",
     "Show the Tip of the Day dialog": "Show the Tip of the Day dialog",
-    "Show the indicator for hidden rows and columns": "Show the indicator for hidden rows and columns",
+    "Show the indicator for hidden rows and columns": "يوشۇرۇن قۇر ۋە رەت ئۈچۈن كۆرسەتكۈچنى كۆرسەت",
     "Show tracked deletions in margin": "Show tracked deletions in margin",
     "Show\/Hide Axis Description(s)": "ئوقىنىڭ چۈشەندۈرۈشىنى كۆرسەت\/يوشۇر",
     "Shows a button next to headings and subheadings to help with outline folding. Even without the button, you can do outline folding with the Navigator.": "Shows a button next to headings and subheadings to help with outline folding. Even without the button, you can do outline folding with the Navigator.",
@@ -2094,8 +2094,8 @@
     "Source Text Character Style": "Source Text Character Style",
     "Sou~rce Text": "مەنبە تېكست(_R)",
     "So~rt...": "تەرتىپلە(~R)…",
-    "Sparkline...": "Sparkline...",
-    "Sparklines": "Sparklines",
+    "Sparkline...": "ۋەزىيەت سىزىقى…",
+    "Sparklines": "ۋەزىيەت سىزىقى",
     "Special": "ئالاھىدە",
     "Special Functions": "ئالاھىدە ئىقتىدار",
     "Spelling": "ئىملا تەكشۈر",
@@ -2268,7 +2268,7 @@
     "Te~mplates": "قېلىپ(~M)",
     "Te~xt": "تېكست(~X)",
     "Te~xt <-> Table...": "تېكست <-> جەدۋەل(~X)…",
-    "Te~xt Attributes...": "Te~xt Attributes...",
+    "Te~xt Attributes...": "تېكست خاسلىقى(~X)…",
     "Te~xt Boundaries": "تېكست چېگرىسى(~X)",
     "Te~xt to Columns...": "تېكستتىن رەتكە(~X)…",
     "Te~xt...": "تېكست(~X)…",
@@ -2427,7 +2427,7 @@
     "Translate...": "Translate...",
     "Transparency": "سۈزۈكلۈك",
     "Transparency tool": "Transparency tool",
-    "Trans~pose": "Trans~pose",
+    "Trans~pose": "ئورۇن ئالماشتۇر(~P)",
     "Trapezoid": "تراپېتسىيە",
     "Tree Control": "دەرەخسىمان كونترول",
     "Tre~nd Line...": "يۈزلىنىش سىزىقى(~N)…",
@@ -2452,9 +2452,9 @@
     "Undo Selection": "تاللاشتىن يېنىۋال",
     "Undo: Data entry": "يېنىۋال: سانلىق مەلۇمات كىرگۈز",
     "Unfold": "ياي",
-    "Ungroup Sparklines": "Ungroup Sparklines",
+    "Ungroup Sparklines": "ۋەزىيەت سىزىقىنى گۇرۇپپىلىما",
     "Unlink Frames": "رامكا ئۇلىنىشىنى ئۆز",
-    "Unmerge Cells": "Unmerge Cells",
+    "Unmerge Cells": "كاتەكچىلەرنى بۆل",
     "Unordered List": "Unordered List",
     "Unprotect Cells": "كاتەكچە قوغدىما",
     "Unprotect sheet": "ۋاراق قوغدىما",
@@ -2693,7 +2693,7 @@
     "~Gallery": "سۈرەت توپلىمى(~G)",
     "~Get Help Online": "~Get Help Online",
     "~Gluepoints": "~Gluepoints",
-    "~Go to Sheet...": "~Go to Sheet...",
+    "~Go to Sheet...": "ۋاراققا يۆتكەل(~G)…",
     "~Goal Seek...": "يەككە ئۆزگەرگۈچى مىقدار يېشىمى(~G)…",
     "~Grayscale": "كۈلرەڭلىكى(~G)",
     "~Grid": "سېتكا(~G)",
@@ -2729,7 +2729,7 @@
     "~Insert Layer...": "قەۋەت قىستۇر(~I)…",
     "~Insert Named Range or Expression...": "ئاتالغان دائىرە ياكى ئىپادە قىستۇر(~I)…",
     "~Insert Snap Guide...": "~Insert Snap Guide...",
-    "~Insert or Edit Pivot Table...": "~Insert or Edit Pivot Table...",
+    "~Insert or Edit Pivot Table...": "ماھىيەت جەدۋىلى قىستۇر ياكى تەھرىرلە(~I)…",
     "~Insert or Edit...": "قىستۇر ياكى تەھرىرلە(~I)…",
     "~Insert...": "قىستۇر(~I)…",
     "~Insertions In Margin": "~Insertions In Margin",
@@ -2792,7 +2792,7 @@
     "~Others": "باشقىلار(~O):",
     "~Outline": "تىزېس(~O)",
     "~Outline Format": "~Outline Format",
-    "~Page": "~Page",
+    "~Page": "بەت(~P)",
     "~Page Break": "بەت ئايرىش بەلگىسى(~P)",
     "~Page Number": "بەت نومۇرى(~P)",
     "~Page Numbers...": "بەت نومۇرى(~P)…",
